--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,11 +1,9 @@
 ---
-title: 绝大多数人是因为无知和贪生怕死
+title: 你一定会看到你一生当中前所未有的全球的经济危机
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836327/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836418/)
 
 台灣寶島農場
-
-
 
  
 
