--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,82 +1,26 @@
 ---
-title: 特鲁多像希特勒对待犹太人一样将“未接种者”当作替罪羊
+title: “枕头哥”林德尔就被传唤的手机记录起诉美众议院特别委员会
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836075/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1836338/)
 
-翻译： Jenny Ball
+**编译：花岗岩**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-08-193743.jpg)
+据零对冲1月7日报道，MyPillow首席执行官迈克·林德尔（Mike Lindell）起诉了调查1月6日国会大厦被入侵事件起源的美国众议院特别委员会，试图阻止电信公司威讯（Verizon）与该小组分享他的信息。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-489.png)图片来源：lifesitenews.com
+该诉讼于5日（周三）在美国明尼苏达州地方法院提起，并将威讯公司、美众议院议长南希·佩洛西和该小组的其他成员列入其中。
 
-《生活新闻》(LifeSiteNews) – 乔·拜登总统和总理贾斯汀·特鲁多（Justin Trudeau）诽谤反对接受实验性 COVID-19 基因治疗注射的美国人和加拿大人，将他们作为他们实施封锁的替罪羊。
+林德尔是在众议院专门委员会向威讯发出传票后提起诉讼的，该传票要求威讯提供2020年11月1日至2021年1月31日期间林德尔经常使用的一部手机的所有通信记录。该手机号码是由威讯的用户My Pillow Inc.分配给林德尔先生使用的。
 
-特鲁多甚至将没有接种疫苗的加拿大人贴上否认科学的“极端主义者”、“种族主义者”和“厌恶女性主义者”的标签。
+诉讼中写道，林德尔先生提起这一诉讼，是寻求宣告性和禁令性救济，以若干理由使传票无效并禁止其执行。林德尔辩称，该传票侵犯了他的第一修正案和第四修正案的权利。诉讼还声称，根据美国众议院的规则，特别委员会的个别成员“无权行事，因为他们没有有效地组织成一个众议院委员会”。林德尔说，“即使特别委员会可以发出传票，传票也超出了特别委员会的权限，因为它要求出示的记录远远超出了特别委员会的调查范围”。
 
-尽管受到批评，但他们都变本加厉，错误地声称未接种疫苗的人应对封锁负责，而他们非常清楚“科学”已经表明，疫苗并不防止最新的 Omicron 变体的传播。
+作为前总统川普的支持者，林德尔在社交媒体上对选举结果提出质疑。2021年2月，推特因林德尔违反其“政策”而永久封了他的号。去年年初，这位MyPillow公司的首席执行官被拍到离开椭圆形办公室时手里拿着神秘的纸条，成为头条新闻。林德尔称这些似乎提到“戒严令”的纸条不是官方的，是律师给川普的建议，林德尔只是帮一位律师送而已。
 
-特鲁多所做的，正是当年希特勒在对犹太人大屠杀前所做的，他正在把整个社会阶层当作替罪羊，煽动仇恨。这就是我们今天在世界上面临的巨大危险——这不是 COVID，这是暴政，它正在威胁着我们所有人，无论是接种疫苗还是未接种疫苗。
+调查1月6日冲击国会大厦事件起因的九人两党委员会已经传唤了一些人作为调查的一部分，包括川普的前国家安全顾问迈克·弗林、他的前顾问斯蒂芬·班农和他的前白宫幕僚长马克·梅多斯。
 
-加拿大总理贾斯汀·特鲁多在魁北克的一个受欢迎的脱口秀节目中发表评论，煽动对反对 COVID 疫苗的加拿大人的仇恨。由于他对法语采访的评论是在 9 月发表的，所以直到上周在社交媒体上发布时，这些评论才迅速传播开来。
+林德尔说两党委员会是“垃圾”，这是一个很大的骗局，他不会在任何垃圾上浪费时间，并说这是一张非法的、腐败的传票，想获取他的电话记录。他没有什么可隐瞒的，但不会交出记录。林德尔还说是中共国攻击了美国，这是有史以来最大的犯罪。
 
-特鲁多谈到“强烈反对疫苗接种的人”。
+**新闻来源**：[MyPillow CEO Mike Lindell Sues Jan. 6 House Select Committee Over Subpoenaed Cellphone Records](https://www.zerohedge.com/political/mypillow-ceo-mike-lindell-sues-jan-6-house-select-committee-over-subpoenaed-cellphone)
 
-他们“不相信科学，他们往往是厌恶女性的人，也常常是种族主义者。”我见过的对精神错乱特鲁多的最佳回应，是**来自加拿大最受欢迎的专栏作家雷克斯****·****墨菲（****Rex Murphy****）**，他在《国家邮报》撰稿。
-
-“对反疫苗者的愤怒是典型的找替罪羊，”墨菲说。随后，雷克斯继续让特鲁多看到他都干了什么，也只有雷克斯才能做到。我多希望我能用雷克斯的经典来表达：
-
-谁在这场瘟疫开始时让机场保持开放？
-
-谁说如果禁止来自中共国的航班就是“种族主义”？
-
-谁从共产主义中国订购了口罩？
-
-谁的发言人说口罩无效？
-
-然后谁的发言人又说必须戴口罩？
-
-谁警告说不要集会，然后去参加“黑命贵”抗议活动？
-
-谁在早餐后从下议院关闭了议会，指挥伟大的加拿大国家的政府？
-
-谁在他管理的大流行期间召集了选举？
-
-谁可以称是真正的“种族主义者”：他4次被拍到把脸涂黑羞辱黑人？
-
-谁在领导了一个试图将武装部队中的性行为不端指控掩盖到桌下的政府之后，现在抛出“厌恶女性”这个词？
-
-墨菲粉碎了特鲁多的暴政，因为特鲁多破坏了自由。
-
-当这同一个人通过他的 COVID 法令破坏所有加拿大人的权利和自由宪章时，谁会问我们是否可以“容忍”他？
-
-在特鲁多的领导下，他父辈的荣耀宪章已经变成了纸巾。
-
-在加拿大的大部分地区，未接种疫苗的人
-
-可能不能去他们想去的地方，
-
-可能不能在痛苦的时刻探望家人，
-
-可能不能在没有证件的情况下旅行或进入公共场所。
-
-最重要的是，如果你拒绝接种疫苗，你就是最重罪和最卑鄙的人； 你就是贾斯汀·特鲁多眼中的反派：反疫苗者。
-
-**在消除拜登类似的疯狂上，谁能比塔克****.****卡尔森更好？**
-
-如果只有北美这样做，已经够糟糕了，但这种现象遍布全球。在法国，马克龙总理竟然公开表示，“那些没有打疫苗的人，我真的讨厌他们，我们将继续讨厌他们，直到最后，这就是策略。”
-
-马克龙走得更远，也许发表了更令人发指的声明：“当我的自由成为对他人自由的威胁时，我就成了一个不负责任的个人。一个不负责任的人，不再是公民。” 他指责“反疫苗者”犯下了“巨大的道德错误”。“他们正在破坏一个国家的稳固性，”他说。
-
-在菲律宾，拒绝接受 COVID 注射的公民被迫面临罚款和监禁的威胁，被迫留在家中。 在许多国家，他们被拒绝使用公共交通工具，一些国家甚至试图禁止他们进入杂货店买日用品。
-
-这是暴政！这正是希特勒对犹太人所做的。他把他们当作替罪羊，**剥夺他们的自由，公开羞辱他们**。谴责这种找替罪羊的宗教领袖的声音在哪里？这一切发生时，大多数宗教领袖怎么竟能保持沉默？是时候大声疾呼，谴责暴政了，否则暴政就真的来了。
-
-新闻来源 ：[lifesitenews.com] [Trudeau is scapegoating the ‘unvaccinated’ like Hitler did the Jews](https://www.lifesitenews.com/blogs/trudeau-is-scapegoating-the-unvaccinated-like-hitler-did-the-jews/)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
