--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,31 +1,11 @@
 ---
-title: 【Michael.Tonny專欄】揭露黑暗，消滅邪惡
+title: 绝大多数人是因为无知和贪生怕死
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1836042/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836327/)
 
-作者：加拿大溫哥華揚帆農場[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+台灣寶島農場
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
 
-在共慘獨裁統治下， 像正常人一樣說話，像正常人一樣做事，對於中共國人來說，永遠是一個遙不可及的夢！
-
-共慘黨說，無論您才高八鬥還是學富五車，都不得擔任法官、檢察官、警察、公務員、公證員、司法鑒定人員、人民陪審員甚至是律師，祖孫三代不能入黨、徵兵，不得參加銀行、國企、事業單位、軍校和警校招聘。
-
-一日為奴、終生為奴！
-
-在中共魔鬼統治下，以合符正常人基本價值取向的邏輯判斷，去思考和規劃人生，帶來的總會是千瘡百孔！
-
-對於中共國人來說，除了消滅共慘黨，還有別的選擇嗎？
-
-我沒有共慘黨員的圓滑和狡詐，我只想做一個正常人！曾經幻想各種各樣的英雄，能拯救蒼生，以至螻蟻。
-
-直到郭文貴先生的出現，我認定他就是我心中的蓋世英雄！跟隨郭文貴先生，加入新中國聯邦，讓我一次次躲過共慘體制下，每天發生的各種慘劇。
-
-我寫的每一篇文章都只是一個具有正常邏輯思維能力的人，對正邪顛倒、善惡不分的世界，最樸素的思考。我每一天都想大聲對共慘黨說，“你完了”！沒有華麗的詞藻，只有正義對邪惡，光明與黑暗！
-
-無論您現在大隱於市，還是不得不暫時遠走他鄉，只要您“揭露黑暗，消滅邪惡”，您都是我心中的英雄！
-
-編輯：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上傳：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
  
 
