--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,41 +1,20 @@
 ---
-title: 探讨新加坡本地良心医生推荐的疫苗解毒方案
+title: 中共算法推荐 必须忠于党 舆论社会性清零！
 ---
-`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/1836279/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/1836410/)
 
-**撰稿：Eva**
+谷歌前CEO在近期接受采访时称，人工智能会根据用戶的喜好推荐东西，同时也被用于视频监控等领域来影响我们的生活。特别是向青少年推荐些有害的信息，强调并放大个人的偏好或观点,使得我们的生活方式和情感表达被人工智能左右。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/下载-3-2.jpg)
+如何让用户能更长时间停留在社交平台里，目前主要的做法是通过激怒用户，也就是中共常用的“拉仇恨”，但这种做法会危及民主。
 
-下图把已有的和本地医生建议的解疫苗方案用黄色标识汇总在一起方便对比：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-08-191330.jpg)
-上图内容来自FLCCC的 I-RECOVER-长期症候群管理试验计划书版本1- 2021年6月16日
+人工智能的推荐算法，已经广泛渗透到我们生活的各个角落，例如你在网络上看到的视频大约80%是推荐系统根据用户的过往浏览记录，自动给用户精准推荐你所喜欢的视频，其目的是让你浏览更多的视频来增加在线时间。当然这会让人忘掉时间的概念、丧失主动寻找信息的能力，并且增强被动接受推荐的内容。
 
-**English Version英文原版：**
+有意思的是，中共网信办新出臺的规定：算法推荐服务必须忠于党，就是一种政治色彩极其强烈的专制策略。您感兴趣的喜币，是不会被推荐的；您想了解西安疫情的发展，是在推荐算法之外的。中共的舆情分析软件非常可悲的、大量被用到了海外的推特、Facebook和油管等网络平台，监控海外华人、留学生和墙内翻墙的人，目的是无异议人士、无负面新闻等舆论社会性清零。
 
+中共在人工智能领域重点关注及领先的技术方面，如脑控技术、器官移植技术和视频监控人脸识别技术，都跟老百姓的生活福祉没任何关系，只是为了更好地控制和奴役老百姓来维护中共的统治。而这些海外的网络媒体平台出卖用户信息给中共，帮助中共在全球推广共产主义，完全背离了西方民主自由的价值观，只为了14亿人市场上赚钱。
 
-
-> [I-RECOVER Protocol](https://covid19criticalcare.com/covid-19-protocols/i-recover-protocol/)
-
-
-
-**疫苗解毒方案A+B**
-
-上图中的A+B解疫苗方案是由香草山农场医疗卫生部推荐的解毒配套，有具体疑问可以登录他们的Discord请教，地址是：
-
-[https://discord.com/channels/702115364770807868/716611739021475912](https://discord.com/channels/702115364770807868/716611739021475912)
-
-**新加坡本地良心医生推荐的疫苗解毒方案A+C**
-
-针对对象：在新加坡万一坚持不住，不得不去打疫苗的战友们
-
-良心医生推荐的具体解毒方案如下：
-
-打第一针疫苗的前2天：
-
-早上吃A伊维菌素 12mg 2粒；晚上吃C氟伏沙明，医生给的剂量还未问明
-
-连续吃2天，第3天去打第一针疫苗（有关疫苗良心医生建议打科兴，他说在来治疗疫苗后遗症中，科兴是相对问题较少！刺突蛋白会比较少！）同时继续吃药，合计全程连续吃5天。
-
-以上解疫苗方案属于极其不成熟的一种分享，请读者和自己本地的良心医生联系，作者不承担任何医药和法律的责任。
+文案：wuxin
+校对：雪菜、文峰
 
  
 
