--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,23 +1,32 @@
 ---
-title: 【中日财经爆】日本一定会成为第二大数字货币市场
+title: 【Michael.Tonny專欄】揭露黑暗，消滅邪惡
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835905/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1836042/)
 
-撰稿：东京樱花团/ 盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-85.png)图片来源于本文链接
-我一再说到日本的HPAY市场，还有日本的未来的数字货币整个的未来，还有在日本的整个的喜币和喜美元的流行，还有未来整个的实施。可以说它是战略性的，应该说是排第二位，除了美国之外它是最重要的。
+作者：加拿大溫哥華揚帆農場[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
-而且日本这个国家，一定会在数字货币市场上这次会抓住这个机会，它不会再输掉了。过去的日本二战之后，在金融市场市场上，简直这个日本这个国家，把所有的国家的财富全输光了。日本的金融烂到什么程度，共产党的科技发明有多烂，日本的金融就有多烂，就这么简单。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
 
-所以说日本的整个的交易一定会有，不管中间有多大的曲折，日本最后一定会成为喜币流行的重要市场。不管有多少挫折，然后在日本这个喜支付是绝对的重要，千万不要错过了时机。
+在共慘獨裁統治下， 像正常人一樣說話，像正常人一樣做事，對於中共國人來說，永遠是一個遙不可及的夢！
 
-日本的这几个农场，因为今天没有说太（细），如果你们错过这个机会，那草根小哥明年这个，再在大直播，你绝对看不到草根小哥了，你不会再看到Cosmos，你不会再看到马拉多纳，你不会再看到勇气、魔女，不会看到的。温暖姐姐，你别在那儿很自信，你别老是今天你和文嘉你俩一唱一和地，我们有蓄积的力量，明年如果在这个事上没搞明白，明年你就成个笑话了。你自己都不好意思看电视了。所以说抓住这机会，一定会是最重要的。对喜币发展的市场就是第二市场。
+共慘黨說，無論您才高八鬥還是學富五車，都不得擔任法官、檢察官、警察、公務員、公證員、司法鑒定人員、人民陪審員甚至是律師，祖孫三代不能入黨、徵兵，不得參加銀行、國企、事業單位、軍校和警校招聘。
 
-[消息来源](https://gettr.com/post/ple42ae1c8)
+一日為奴、終生為奴！
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+在中共魔鬼統治下，以合符正常人基本價值取向的邏輯判斷，去思考和規劃人生，帶來的總會是千瘡百孔！
+
+對於中共國人來說，除了消滅共慘黨，還有別的選擇嗎？
+
+我沒有共慘黨員的圓滑和狡詐，我只想做一個正常人！曾經幻想各種各樣的英雄，能拯救蒼生，以至螻蟻。
+
+直到郭文貴先生的出現，我認定他就是我心中的蓋世英雄！跟隨郭文貴先生，加入新中國聯邦，讓我一次次躲過共慘體制下，每天發生的各種慘劇。
+
+我寫的每一篇文章都只是一個具有正常邏輯思維能力的人，對正邪顛倒、善惡不分的世界，最樸素的思考。我每一天都想大聲對共慘黨說，“你完了”！沒有華麗的詞藻，只有正義對邪惡，光明與黑暗！
+
+無論您現在大隱於市，還是不得不暫時遠走他鄉，只要您“揭露黑暗，消滅邪惡”，您都是我心中的英雄！
+
+編輯：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上傳：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
