--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,36 +1,21 @@
 ---
-title: 立陶宛下令国营铁路公司不与中资企业签约
+title: 哈萨克斯坦总统：我下令可以无预警开枪
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835808/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836004/)
 
-作者：东京樱花团 – 在远方
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-台媒1月6日报道，立陶宛总理发言人告诉媒体，立陶宛政府已于5日下令，基于国家安全利益考量，国营立陶宛铁路公司，将不与中共国拥有的西班牙桥梁制造商签署合约。
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/7-8.jpg)（图片来源于本文链接）
+鉴于抗议浪延续多日，哈萨克斯坦总统托卡耶夫明确表示，授权安全部队可以在无事先警告的情况下开枪。当局称，迄今有40多人丧生。在国内爆发严重骚乱后，哈萨克斯坦总统托卡耶夫（Kassym-Jomart Tokajew）下令向武装示威者开枪。在一次全国电视讲话中，他说：“我已命令警察和军队在无预警的情况下开火。”
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/7-7.jpg)
+他称，在最近几天局势尤为严重的阿拉木图，2万示威者从事了攻击行为。他将示威者称为“恐怖分子”，受境外势力操控。数天来，哈萨克斯坦国内示威者同安全部队之间爆发冲突，其激烈程度前所未见。抗议活动最初针对不断上涨的天然气价格，很快扩展为反政府浪潮，并蔓延全国。周五早晨，该国电视台报称，迄今，有26名示威者被击毙，另有3000多人被捕。人们担心，平民死亡人数可能更高。官方称，至少有18名安全人员殉职。此前，托卡耶夫已宣布全国进入紧急状态，并吁请俄罗斯领导的军事联盟——集约组织（CSTO）派遣维和部队，提供帮助。这一维和部队首批官兵已于周四飞抵哈萨克斯坦。在电视讲话中，托卡耶夫对此致谢。他称：“我特别感谢俄罗斯总统普京。他对我的呼请做出了非常迅速、友好的回应。”
 
-据悉，在西班牙登记的中共桥梁和道路基础设施公司，以最低出价6250万欧元，赢得了一项在立陶宛的桥梁建设招标。该公司网站上，将中共国路桥集团国际建设股份有限公司，列为母公司。
+信息来源：
 
-而国营立陶宛铁路公司去年曾表示，已要求政府审查这项合约，西班牙子公司与中共国之间的关系，为合约风险之一。
+[哈萨克斯坦总统：我下令可以无预警开枪](https://www.dw.com/zh/%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E6%80%BB%E7%BB%9F%E6%88%91%E4%B8%8B%E4%BB%A4%E5%8F%AF%E4%BB%A5%E6%97%A0%E9%A2%84%E8%AD%A6%E5%BC%80%E6%9E%AA/a-60358301)
 
-参考链接：
-
-- [立陶宛下令國營鐵路公司 不與中資橋梁建造商簽約](https://cn.rti.org.tw/news/view/id/2121379)
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
-
-总编：Irene木木
-编辑：Kathy文艺
-校正/发稿：海阔天空1
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
