--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,9 +1,9 @@
 ---
-title: 彭培奥：中共不应被允许从奥运盛事中获益，而应当被追责
+title: 中共当局关闭部分边境口岸，并发出了相关水果的进口禁令
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1835639/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1835773/)
 
-01/06/2022 彭培奥：习近平将会利用奥运会通过中共的宣传机器向世界吹嘘中共国是个伟大而美好的民主国家。它们不应被允许从奥运盛事中获益，而应当为其的所作所为被追责。
+01/06/2022 由于据称从进口水果上检测到了中共病毒，中共当局已经关闭了一些边境口岸，并发出了相关水果的进口禁令
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
