--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,28 +1,20 @@
 ---
-title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
+title: “以共灭共” 中共开年打两虎
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
+`德国纽伦堡正义农场` [轉載自GNews](https://gnews.org/zh-hans/1836369/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
+作者：德国纽伦堡正义农场-儒为
+![](https://assets.gnews.org/wp-content/uploads/2022/01/打虎.jpeg)封面来源：网络图片
+2022年1月8日，中共中央纪委国家监委网站发布2名中管干部接受审查调查信息，“**西藏自治区政府副主席张永泽接受中央纪委国家监委审查调查**”，“**中国人寿保险（集团）公司党委书记、董事长王滨接受中央纪委国家监委审查调查**”，再次释放了全面从严治党永远在路上，把严的主基调长期坚持下去，党风廉政建设和反腐败斗争一刻不停的强烈信号。
 
-**2022-01-0**8
+2022年1月6日，七哥盖特：乖乖哟… …梦游开始！【20大 习太阳 国家主席，胡春华总理，陈敏尔 第一副总理，陈全国 纪委书记，李晞 政协主席，丁薛祥 人大委员长… …】。七哥每次梦游都能让中共内部颤三颤，每次都能“梦成真”，七哥也说自己从来不分析，全是靠情报。让我们再次感谢默默无闻，甚至流血牺牲，为华人争取未来和希望的战友们。
 
-华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
+“以共灭共”进行时，中共开年打两虎，在中共国春节之前，在中共北京冬奥会之前，在中共二十大之前，让中共党内乌云盖顶，杀气腾腾。陈全国，中共刽子手，不降反升，释放信号非常明显，即藐视美国之前对陈全国的制裁，又对党内释放出“大清洗”信号，江、曾、王、孟等党内各山头都将被清洗。政治斗争的结果虽然是残酷的，老白姓也将是被裹挟的，但是对消灭中共体制是利好的。
 
-一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
+新闻来源：🔗[开年打两虎：保持对腐败的压倒性力量常在](http://www.news.cn/legal/2022-01/08/c_1128244552.htm)
 
-克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
+*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
 
-哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
-
-（秘翻新闻主编 清风先生编译报道）
-
-发布:星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
