--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,22 +1,37 @@
 ---
-title: 南极疫情是外来输入，还是疫苗引发？
+title: 盖特改变了社交媒体的游戏规则
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836115/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836365/)
 
-撰稿—祥瑞舟
-校对/上传—无明逆流
+撰稿：银河勇气星—骄子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
+郭文贵先生在1月5日的直播中与战友分享了盖特的巨大价值。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-504.png)
+郭先生表示，世界当下的社交媒体平台如推特、脸书、抖音等，都是以大科技公司或大集体来垄断个人用户，群体控制并奴役个体。与之相对的，盖特开创了以个人用户为主、个体之间可以自由沟通真实讯息且不被平台垄断的区块链式人类互动新型模式。其中，盖特平台最出众的一点在于，金融与人的行为直接挂钩——这一模式打破了世界各国的法币对人们的严格管控与限制，真正做到货币、自由、人权、信息的解放。
 
-据外媒报道，来自南极的一个偏远科考站近日传来了坏消息，半个月以来科考站超过一半的工作人员感染了新冠病毒。报道中指出，该南极科考站为“比利时南极伊丽莎白公主站”，在12月14日发现了第一例感染新冠病毒的工作人员。此后，又有多人病毒检测呈阳性。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/121374_1.jpg)
-该报道指出，所有工作人员在来到该科考站之前，都已经完成了新冠疫苗的接种，并且病毒检测也都呈阴性，目前尚不清楚是如何感染新冠病毒的。
-考虑到在病毒和疫苗真相面前所谓世界主流媒体已经被利益群体收买，从该篇报道中我们无法找寻更多的真相。然而实际上看过这篇报道的读者都会问同样的问题，他们是怎么感染病毒的？
+郭先生也提到，在人类应对中共病毒及其疫苗的这场大灾难中，旧的社交媒体平台都有原罪，而罪恶是需要付出代价的，比如死亡。但是，盖特是一个没有原罪，并且给人类带来新的生命和信仰的平台。
 
-尽管还缺乏足够多的证据，可常识是任何人都无法忽略的：在基本与世隔绝的南极，是不可能有外来输入传染源的。如果说有，那唯一的传染源很有可能是疫苗接种者自身疫苗副作用爆发所导致，这和西安情况有些相似。正如七哥最近爆料中提到过的那样，西安疫情是接种疫苗副作用导致的后果。
+郭先生补充道，盖特完全改变了旧社交媒体公司的游戏规则，其主导的以个体为主的时代已经到来。同时，到目前为止，盖特的数据还在不断攀升中。
 
-除了爆料革命和部分西方正义人士一直在揭示病毒与疫苗真相，世界各国政府目前还都没有对病毒真相进行联合调查问责，疫苗接种也还没有被各国政府按下停止键，还需要更多时间去传播疫苗真相。
 
-当疫苗灾难频发、出现大量死亡和伤残案例，整个世界秩序陷入停摆与混乱的时候，人类当下面临的这场生化危机真正的拐点才会到来。停止接种疫苗、病毒追责以及疫苗追责将接踵而至，所有真相终将水落石出，正义终将战胜邪恶！
 
+新闻来源：[1/05/2022 文贵直播](https://gettr.com/post/pmli8c3d40)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
+
+总编：文特
+
+编辑：Irene木木
+
+校正/发稿：浪迹天涯
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
