--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,34 +1,45 @@
 ---
-title: 强制疫苗国家的典型案例
+title: 郭文贵直播摘要和音频 2022.01.07
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1836064/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1836329/)
 
-撰稿：挺郭建筑师
-![](https://assets.gnews.org/wp-content/uploads/2022/01/803.jpg)图片制作：澳喜农场©森森
-2021 年2月8日起，强制疫苗在古老的欧洲大陆拉开了序幕。未接种疫苗者受到了诸如 “SIM卡被封”、“驾照被吊销”等一系列疯狂的制裁。一位名为文森特. 惹尼 (Vincent Geny)的作者于2022年1月6日在Marianne周刊发表了一篇报道，他总结了目前发生在疫苗独裁国家的一些典型案例。
+摘要撰稿人：文俊
 
-梵蒂冈是世界上第一个实施强制疫苗的国家。首先是对神职人员，然后在 10 月将其扩大到所有人。对拒绝接种的人惩罚从罚款到解雇不等。这一强制措施于 10 月初扩大到瑞士卫队成员。其中三个成员宁愿返回瑞士也不打疫苗，而另外三人无限期搁置接种计划。
+音频提供者：左媛
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-501.png)
+### 视频链接：
 
-奥地利政府自去年11月19日起宣布：从2021年 2 月 1 日起，任何 14 岁以上的人都必须接种疫苗。奥地利人必须在 3 月 15 日之前完成接种。拒绝接种者将每三个月缴纳 600 欧元的罚款，拒付者罚金将高到 3,600 欧元。希腊很快步奥地利后尘。希腊总理于 11 月底宣布自 1 月 16 日起，还没有接受第一针的人将面临 100 欧元的罚款，每月累加。
+[https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
 
-印度尼西亚是第一个实施强制疫苗措施的亚洲国家。在 2021 年 2 月开始对所有成年人实施强制接种措施，其惩罚方式多种多样，取决于地方当局。在一些地区，居民因未接种疫苗而被拒绝发放驾照。或者中断社保金或者停止收发工作之必要信件。在首都雅加达，未接种疫苗的人最高可被罚款 290 欧元。这些强制措施导致的极端情况时有发生。2021 年 10 月 17 日，一名 19 岁女子报警遭到强奸，警方因为她没有疫苗接种证明而拒绝接警。
+### 音频链接：
 
-新加坡地方当局则将某些责任推卸给未接种者个人。所有入住重症监护病房的未接种病人都必须自己支付住院费用，约为 16,200 欧元。
+### 摘要：
 
-在巴基斯坦的旁遮普省，当局对未接种疫苗的人实施了断网。自 6 月 10 日起，未接种疫苗的人发现他们的 SIM 卡被封，而手机是该国最常用的上网方式。
+- 木兰身心健康
+- OMCON 对 COVID 病毒有一点缺点，OMICON 是假的
+- 疫苗mRNA（刺突蛋白）就是病毒
+- 拜登可能导致很大的必然会被否决
+- 中国消费金融危机流氓全球名人
+- 中共灭亡制造的金融危机，美国的资产可能会缩水50%-70%
+- 中共灭亡行动的全球经济危机，喜联储币重新书写了数字货币的游戏规则
+- 国内买钱的战友，一定要先KYC，不要因为买喜币影响安全，要买喜，大家可以帮忙，因为有战友在银行付款被警察威胁
+- 喜币如果没有锁币，目前的价格会统计币3块钱。战友们晃晃的“加锁”5块钱，伟大的太棒了
+- 共产党越打压新中国联邦护照，新中国护照越升值
+- 新中国联邦，爆料革命，郭文贵成为共产党绝对不能谈的词
+- 胡海峰是胡锦涛和习近平交易的结果，未来的接班人
+- 20大常委会：习太阳国家主席、胡春华总理、陈敏尔第一副总理、陈全国纪委书记、李晞政协主席、丁雪祥人大委员长
+- 二十个大常会公布内斗，没有江家人，贾庆林，栗战书会善罢甘休吗？
+- 北朝鲜参加奥会，金正恩对共产党冬大开放，100亿美元现金，进入，都无法完成中共的使命。而且很怕死（怕斩首）
+- “中美是否一战？我觉得火战热战应该是在冬奥会之后，可能会因为台湾问题
+- 病毒后新加波不会有李家
 
-在北美洲，加拿大联邦当局自 1 月 2 日起暂停了未接种者的失业救济金。联邦就业部长 Carla Qualtrough以保护就业和经济为名，要求民众接受其强制疫苗的“主导政策 ”。作为联邦政体的加拿大，每个省都有权颁布额外的政策措施。魁北克走得更远。蒙特利尔当局宣布，疫苗护照将扩展到烟酒售卖领域，而烟酒行业都由当局控制。这一措施将在未来几天内公布。
 
-法国政府也步步紧逼，1月6日早晨5点，通过议会偷偷摸摸将健康护照变成强制性疫苗护照。
 
-世界各主流国家通过强制疫苗政策加速戕害国民，追杀觉醒的民众。这也恰恰显示了政府首脑、政客和中共勾结者们的心虚。他们欲盖弥彰，穷凶极恶，必将激起更多良知媒体和民众的觉醒，奋起反抗，终为其送葬。
 
-新闻参考链接：
 
-[https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde](https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde)
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+编辑发布：闪电训练
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
