--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,25 +1,36 @@
 ---
-title: 香港&#8221;派对门&#8221;：逾百人全须送检隔离 港府被批搞双标
+title: 01/08每日播报&#124;播客巨星乔·罗根加入盖特后引起注册浪潮
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836016/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836215/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/01/6-14.jpg)（图片来源于本文链接）
-香港全国人大代表洪为民本周一（1月3日）举行逾百人生日派对，事后有一名与会者确诊中共病毒（新冠病毒Covid-19），另一名与会者初步确诊。据香港电台援引卫生防护中心传染病处主任张竹君报道，两名确诊者互不认识，当局难界定紧密接触者逗留，因此当晚整个场合的人士都要检疫。卫生防护中心另外表示，因为这场聚会须检疫人数超过170人，成为这一波疫情最大的传播群组。出席宴会的人包括香港政界高层及部分立法会议员，民政局局长徐英伟、财经事务局局长许正宇、警务处处长萧泽颐、入境处处长区嘉宏、廉政专员白韫六等纷纷在列。
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-当日举行生日宴的洪为民于周五当天发文致歉。有人附上一张他当晚不戴口罩与他人肩并肩唱歌的照片作为回应。根据香港的防疫规定，在餐饮场所离开餐桌时亦须配戴口罩。周五，香港政府刊宪公布强制检测名单，涉及44个处所，其中就包括洪为民举行宴会的西班牙餐厅。
+**2022-01-0**8
 
-香港政府周三宣布因应奥密克戎疫情已进入社区，收紧多项社交距离措施，周四（1月7日）凌晨零时起晚市禁堂食、并关闭酒吧、健身室和体育场地等表列处所、取消所有大型活动包括单车节等，为期14天。
+据《华盛顿邮报》1月7日报道，在播客巨星乔·罗根(Joe Rogan)加入后的几天内，盖特已经有超过 100 万新用户注册。
 
-港府公布最新措施后不久，便传出洪为民生日宴会爆疫的消息，因此有不少评论指出这是“只许高官赴宴、不许百姓堂食”的双重标准。例如，香港《星岛日报》认为：“对普罗百姓防疫要求多多，却对高官违反规定却只眼开，只眼闭。正因为高官未能以身作则，势将影响政府的公信力。”香港《明报》更是发文直接要求：徐英伟拖抗疫后腿，失当行为须即下台。
+报道称，盖特是一个吸引保守社交媒体用户的社交平台。罗根周日在该网站上发表了第一篇帖子的5天后，该平台的新用户已经达到了 100 万大关，。盖特发言人埃博尼·鲍登 (Ebony Bowden) 称，这使盖特网站的用户总数已经超过 了400 万。
 
-信息来源：
+虽然罗根先生目前仍然拥有一个推特帐户，但是在乔治亚州众议员玛乔丽·泰勒-格林（Marjorie Taylor-Greene）的账号在周日被推特封号后，他考虑到了推特的审查制度，于是他加入了盖特。
 
-[香港”派对门”：逾百人全须送检隔离 港府被批搞双标](https://www.dw.com/zh/%E9%A6%99%E6%B8%AF%E6%B4%BE%E5%AF%B9%E9%97%A8%E9%80%BE%E7%99%BE%E4%BA%BA%E5%85%A8%E9%A1%BB%E9%80%81%E6%A3%80%E9%9A%94%E7%A6%BB-%E6%B8%AF%E5%BA%9C%E8%A2%AB%E6%89%B9%E6%90%9E%E5%8F%8C%E6%A0%87/a-60357390)
+罗根先生在他的第一个盖特帖子中写道：“为了防止推特上的东西变得更蠢，我现在也在这里。欢呼吧！”
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+据报道，在罗根先生加入盖特的第二天，也就是 1 月 3 日，盖特到注册人数就达到了 343,000，这是该网站自 7 月推出以来的最大单日注册量。 鲍登还补充说，盖特并没有支付罗根加入该网站的费用。
+
+对于保守派来说，盖特网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。
+
+同时盖特是一个国际平台。截至周五，盖特表示其在美国有220万用户，其次是巴西的50万用户，以及英国、德国和法国的大量用户。
+
+盖特的CEO杰森·米勒(Jason Miller)先生对《邮报》说：“这些数字证明，社交媒体用户开始意识到硅谷高管日益严厉的审查制度，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。”
+
+（秘翻新闻主编Grace编译报道）
+
+发布:星星
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
