--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,21 +1,36 @@
 ---
-title: 为何有脱北者选择回朝鲜？
+title: 中国科学家因窃取孟山都公司的机密而认罪
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836003/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836157/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/01/3-11.jpg)（图片来源于本文链接）
-在刚刚过去的元旦，一名2020年11月穿越非军事区进入韩国的脱北者循相同路线重回朝。此事引起韩国社会的广泛讨论。此事件被韩媒称为“回力镖叛逃”。韩国媒体批评军方守卫松散，玩忽职守. 一般而言，通过非军事区（DMZ）叛逃的情况极为罕见。在这个长达248公里，宽约4公里的边境地带，除了设有铁丝网外，两侧都有重兵把守，更设置了地雷和坦克陷阱。每当有人设法穿越非军事区而且未被察觉，韩国军方便会受到公众的强烈质疑与批评。韩国军方为此事道歉，韩国联合参谋本部议长元仁哲表示：“我对于这起事件感到非常抱歉。我承诺尽一切努力确保类似事件不再发生。”韩总统文在寅已下令对军队的整体安全布局进行特别检查。
+**编译：美哥**
+**编辑:   MSGZ  **
 
-韩民众疑惑为何脱北者会选择回到一个生活极为艰难的国度，至少在外人的眼里是如此。据报道，该名返朝的脱北者只能做“门卫”，为了生计而挣扎。负责协助脱北者适应韩国社会的统一部则强调，除了金钱补助外，该名男子在寻找住宿和求职时都获得帮助，而享有医疗福利。尽管如此，在迄今逃往韩国的3万多名脱北者中，至少30人在过去10年间选择重返朝鲜。每个人回朝鲜的理由都不同。“有人觉得在这里保住工作很难；有人因为思念当地的亲人；还有人无法适应文化差异、难以适应韩国生活；有人不能通过文凭考试，迫不得已只能在餐厅打工；或是觉得受到歧视。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/树叶.png)图片来源  theguardian.com
 
-信息来源：
+前孟山都雇员向海涛，在美期间被指控窃取了美国农业技术，目的是让中共政府受益。
 
-[为何有脱北者选择回朝鲜？](https://www.dw.com/zh/%E4%B8%BA%E4%BD%95%E6%9C%89%E8%84%B1%E5%8C%97%E8%80%85%E9%80%89%E6%8B%A9%E5%9B%9E%E6%9C%9D%E9%B2%9C/a-60359568)
+周四，美国司法部门的起诉书里写道了44岁的向海涛密谋为中华人民共和国窃取商业机密。目前他已承认了罪行。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+向海涛在密苏里州的孟山都总部曾以科学家的身份工作过，在他离开后，就买了一张飞回北京的单程票，而执法人员在他的电子设备里发现一份“营养素优化”算法的系统副本，而该演算法属于孟山都的机密。本案将于4月7号宣判，如果指控全部成立，其将面临15年有期徒刑和500万的罚金处罚。
+
+美国密苏里州东区的检察官弗莱明 (Sayler Fleming) 表示：“我们不能允许美国公民或者外国人，将敏感商业信息交给别国的竞争对手，这些罪行对美国经济和国家安全十分危险。”
+
+美国联邦调查局反间谍助理小艾伦.科勒也称：“当像中国这样的政府盗取我们的技术来实现经济发展的同时，美国人成为了最大受害者。美国不仅仅是机密实验室里的军事技术，提高棉花产量的农业技术也同样会被对手觊觎。”
+
+向海涛的认罪是美国司法界对反对中国干涉的又一次新胜利。上个月，前哈佛大学的化学部门负责人，因为非法参武汉工程大学的项目而认罪。
+
+原文链接：[https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/](https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/)
+
+*发布：盘古相聚*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
