--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,30 +1,50 @@
 ---
-title: 【Michael.Tonny专栏】揭露黑暗，消灭邪恶
+title: 澳23岁双重接种的举重冠军死于COVID-19
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1835997/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836117/)
 
-作者：加拿大温哥华扬帆农场[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
-在共惨独裁统治下， 像正常人一样说话，像正常人一样做事，对于中共国人来说，永远是一个遥不可及的梦！
+翻译： Jenny Ball
 
-共惨党说，无论您才高八斗还是学富五车，都不得担任法官、检察官、警察、公务员、公证员、司法鉴定人员、人民陪审员甚至是律师，祖孙三代不能入党、征兵，不得参加银行、国企、事业单位、军校和警校招聘。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-494.png)图片来源 :thegatewaypundit.com
 
-一日为奴、终生为奴！
+根据一份报告，一名 23 岁的科学家、举重冠军和健康运动员在检测出 Covid-19 呈阳性后，在悉尼一家医院死亡。
 
-在中共魔鬼统治下，以合符正常人基本价值取向的逻辑判断，去思考和规划人生，带来的总会是千疮百孔！
+詹姆斯·康迪利奥斯（James Kondilios）是堪培拉的居民，在因病毒并发症于 1 月 4 日在圣文森特医院去世之前，已知他没有任何潜在的健康问题。
 
-对于中共国人来说，除了消灭共惨党，还有别的选择吗？
+在新南威尔士州卫生当局透露他的身份后，他的家人和朋友都在哀悼并表示敬意。
 
-我没有共惨党员的圆滑和狡诈，我只想做一个正常人！曾经幻想各种各样的英雄，能拯救苍生，以至蝼蚁。
+他的一位朋友在 Facebook 上发布了一条情感信息作为致敬：
 
-直到郭文贵先生的出现，我认定他就是我心中的盖世英雄！跟随郭文贵先生，加入新中国联邦，让我一次次躲过共惨体制下，每天发生的各种惨剧。
+（更新 – 致敬后来被删除）
 
-我写的每一篇文章都只是一个具有正常逻辑思维能力的人，对正邪颠倒、善恶不分的世界，最朴素的思考。我每一天都想大声对共惨党说，“你完了”！没有华丽的词藻，只有正义对邪恶，光明与黑暗！
+“非死不可”说发文已不可访问
 
-无论您现在大隐于市，还是不得不暂时远走他乡，只要您“揭露黑暗，消灭邪恶”，您都是我心中的英雄！
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-496.png)图片来源 :thegatewaypundit.com
 
-编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+他最近的死亡提出了一个问题，如果他因为接种了双重疫苗，并且没有潜在的健康状况，但受到保护免受 COVID-19 病毒的疫苗的侵害，那么会发生什么？这打破了疫苗将保护您免受病毒侵害的整个说法。
 
+福奇博士、药企，企业媒体和公共卫生机构，从一开始就一直在对 Covid 撒谎。
+
+**他们说疫苗会阻止病毒传播**。
+
+**他们说接种疫苗的人可以不戴口罩。**
+
+**他们说接种疫苗的人不会重病。**
+
+**他们说接种疫苗的人不会死亡。**
+
+任何还在信任专家的人都应该得到他们的帮助。我们从一开始就试图用理智、逻辑，和实际统计数据，与他们进行这场对话，**我们应该为我们失去的自由、时间和财富而得到补偿。**
+
+医疗行业、公共卫生行业、学术界和政府的合法性已被 Covid 抹去。在“卡内科亚大帝” (KanekoaTheGreat)的这段视频汇编中观看他们的谎言。
+
+新闻来源 :[thegatewaypundit.com] [Double Vaccinated 23-Year-Old Powerlifter Champion with No Underlying Health Condition Dies from COVID-19 in Australia](https://www.thegatewaypundit.com/2022/01/double-vaccinated-23-year-old-powerlifter-champion-no-underlying-health-condition-dies-covid-19-australia/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
