--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,46 +1,28 @@
 ---
-title: 金木水火土是整个中国人文明的最根本的起源和逻辑思维
+title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835996/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d9556adffab035958c2e3d](https://gtv.org/video/id=61d9556adffab035958c2e3d)
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-**郭文贵先生：**我的理解，筷子，中国的筷子，筷子是中国的筷子看着没有，阴阳，它是阴阳的，阴阳放了5个手指头里边，金木水火土，就是整个中国人的文明的最根本的起源和逻辑思维。而西方是1+1=2，中国1+1，两个筷子等于11，1+1=11，中国人完全是个包饺子文化的，是阴阳，它是天理，天文学说，是中国发明很早的，但是主要是在特别大清朝以后，大秦朝到最后的大清朝，愚民文化，就是商鞅五策，把文明彻底的断了层、断了代。
+**2022-01-0**8
 
-而西方文明跟随了逻辑文化，完就是今天的科学，严格讲真的，美国人是什么？宇宙无限大，他是在把沙子的事搞明白了，地球上把沙子搞明白了，中国人把宇宙搞明白了，但是把沙子给忘了。
+华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
 
-所以说东西方文明之间如果是相合，它的刀和叉就是逻辑的开始。切掉，夹住，放嘴里，是吧？而且用不同的地方有不同的吃法，它是完全是逻辑学的，这就是科学，就是当下的科学。那么中国是阴阳，阴阳是大着去了是吧？男女，黑白天。我们在这两个文化实际上不是矛盾的，但可悲的事情，中国的先进的文明被西方的科学所替代，这就看到中国的所谓哲学，中国的和科学之间巨大的矛盾。
+一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
 
-所以中国人只有嘴巴上的巨人，行动上是侏儒；西方人是行动上的巨人，但精神上不见得多高，这就是为什么新中国联邦我们要做到的，海瑟老师每次讲到星座的时候，我觉得如果把星座和中国的五行能结合到一起，我们新中国联邦人，海瑟你就是我们新中国联邦的国师，就是精神哲学大师，期待着更多的能听到你的课，谢谢！
+克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
 
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
+哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
 
-编辑整理：Jacques；
+（秘翻新闻主编 清风先生编译报道）
 
-字幕文件制作：小满；
+发布:星星
 
-视频制作及上传：Cindy；
+* * *
 
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
