--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,53 +1,21 @@
 ---
-title: 风和火在一起力量巨大,风和水在一起风仗水势却是可收的
+title: 南极疫情是外来输入，还是疫苗引发？
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835966/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836115/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d954cbdffab035958c2e1e](https://gtv.org/video/id=61d954cbdffab035958c2e1e)
+撰稿—祥瑞舟
+校对/上传—无明逆流
 
-**郭文贵先生：**你现在看一下，你看旁边这个角儿上，和你对面的遥相对面的角儿，小斯基，小斯基是今天灯光调的最好的，但是灯光它调最好的时候，你记住，它就同样一个另外一个极端就出来了。他是最好的，但是他的表情里边就现在小斯基属于缺水，这种人他属于缺水，他的脸部表情并不，并不悦悦。
+据外媒报道，来自南极的一个偏远科考站近日传来了坏消息，半个月以来科考站超过一半的工作人员感染了新冠病毒。报道中指出，该南极科考站为“比利时南极伊丽莎白公主站”，在12月14日发现了第一例感染新冠病毒的工作人员。此后，又有多人病毒检测呈阳性。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/121374_1.jpg)
+该报道指出，所有工作人员在来到该科考站之前，都已经完成了新冠疫苗的接种，并且病毒检测也都呈阴性，目前尚不清楚是如何感染新冠病毒的。
+考虑到在病毒和疫苗真相面前所谓世界主流媒体已经被利益群体收买，从该篇报道中我们无法找寻更多的真相。然而实际上看过这篇报道的读者都会问同样的问题，他们是怎么感染病毒的？
 
-你再看，你再看这个非常有意思，你看看文耀，文耀和你、和你俩再对比一下子，文耀穿了今天是黄色，就是金色，黄为土，和你的水，水土是相克，知道了吗？你这水多，她是土多，土里边她戴黑色的，那里边马甲，你看水（土）很相平衡。文耀今天大赢，你俩水过多，会失去平衡。
+尽管还缺乏足够多的证据，可常识是任何人都无法忽略的：在基本与世隔绝的南极，是不可能有外来输入传染源的。如果说有，那唯一的传染源很有可能是疫苗接种者自身疫苗副作用爆发所导致，这和西安情况有些相似。正如七哥最近爆料中提到过的那样，西安疫情是接种疫苗副作用导致的后果。
 
-万物皆为平衡，风和火之间是什么你知道吗？风助火势，火体现风的价值，风和火在一起那就是，那家伙就是力量巨大；但风和水在一起，风水，你看风和水在一起的时候，风仗水势，但是你是可收的，其实很有意思。
+除了爆料革命和部分西方正义人士一直在揭示病毒与疫苗真相，世界各国政府目前还都没有对病毒真相进行联合调查问责，疫苗接种也还没有被各国政府按下停止键，还需要更多时间去传播疫苗真相。
 
-你看德州牛仔，那是老战友了，德州牛仔你看，这脸上一长上去，就是那种，要就在共产党那块，就是当地主的，一看地主的家庭长大的是吧？脑门大、有钱，是吧？鼻子还有肉是吧？然后一看很傲慢是吧？这是当地主的。他今天穿啥？灰色，灰色在，就是风的颜色，风里边黑的水，给它打上个红领带，看上去很协调很配合，但是你能看出他，他缺一样很重要，他今天应该穿黄，或者穿红，都比它好。
-
-我们中国人永远打领带是对比性的领带，可恰恰七哥过去也曾经很土过，也经历过，我真经过五台山大师站在那说：文贵，色彩就是你的运气，你走的路、你穿的衣服就是你的命，就是你的运。哇塞，从那以后我的时尚，我的穿着打扮就跟真的很按风水走的。
-
-你看看海瑟今天做这个大师级的，你看她这个头发你看看，像那个狮子王，咵一下子，眼镜是吧？然后里边黑灰白，你看这个配的颜色。你这不你不服不行，这就是个大师级，带着一种神秘的力量。就她这个眼眶小了和大了都不好，今天她就可以整明白了，哗，这个头发垂到这，是吧？你一看不缺水、不缺火、不缺土，金木水火土都不缺的人，这一看这人水肯定多，而且是要多少有多少，说停就停，可了不得了。
-
-你再看拉姆，年轻的，是吧？白色，白围巾，你看这粉色的小衣裳穿的年轻，这属于什么时候？这是刚刚叫初旺之水，是刚刚开始，这可了不得了，这就是年轻水，这就是真正的风水当中的风和水之间平衡，风仗水势，水火相生，同时它之间，它既能作恶，它也能行，它也能行善，就看你了。
-
-霹雳姐姐来了，这霹雳姐姐，霹雳姐姐咱这名字都吓死人了，共产党不怕咱怕谁，就这名都能吓死人了是吧？央金拉姆、霹雳姐姐、小斯基、德州牛仔、文耀、海瑟，我的天，莘七女孩、长岛哥，你说都这名字吓死人了。所以说风水这个是五行，未来叫海瑟，海瑟讲的太好了。
-
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
-
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+当疫苗灾难频发、出现大量死亡和伤残案例，整个世界秩序陷入停摆与混乱的时候，人类当下面临的这场生化危机真正的拐点才会到来。停止接种疫苗、病毒追责以及疫苗追责将接踵而至，所有真相终将水落石出，正义终将战胜邪恶！
 
  
 
