--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,60 +1,34 @@
 ---
-title: 红旗和火最怕水,共产党最怕壬寅年,风是上天给我们的信号
+title: 强制疫苗国家的典型案例
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835932/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1836064/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d9542adffab035958c2df3](https://gtv.org/video/id=61d9542adffab035958c2df3)
+撰稿：挺郭建筑师
+![](https://assets.gnews.org/wp-content/uploads/2022/01/803.jpg)图片制作：澳喜农场©森森
+2021 年2月8日起，强制疫苗在古老的欧洲大陆拉开了序幕。未接种疫苗者受到了诸如 “SIM卡被封”、“驾照被吊销”等一系列疯狂的制裁。一位名为文森特. 惹尼 (Vincent Geny)的作者于2022年1月6日在Marianne周刊发表了一篇报道，他总结了目前发生在疫苗独裁国家的一些典型案例。
 
-**郭文贵先生：**疯狂的疯就是自然的“风”加上一个“疒”字边，就是一个人违背自然的东西你就中风了，人就会中风。然后呢你这个形为精神上就会疯狂。金木水火土，大家看到中国这个定义很了不起的。西方有阳历年，这个有一年十二个月，中国有农历年十二个月，用西方所谓的星座，面对着中国人的十二属相。
+梵蒂冈是世界上第一个实施强制疫苗的国家。首先是对神职人员，然后在 10 月将其扩大到所有人。对拒绝接种的人惩罚从罚款到解雇不等。这一强制措施于 10 月初扩大到瑞士卫队成员。其中三个成员宁愿返回瑞士也不打疫苗，而另外三人无限期搁置接种计划。
 
-今年是虎年，属虎的战友们今年记住，虎年除了你本命年记住，特别是虎年，虎年几乎属虎的人你有两个极端，一个是今年是你最好的年，一个是让你一定要小心，特别是要小心车祸，交通这种金属的事件一定要防它。中国人有中国的逻辑，它的文化经历是有道理的，它跟西方的星座是遥相对应的，没有任何矛盾，千万记住它不是互相否认的，只是用英语说了我爱你，“I love you”。中文说“我爱你”，是一模一样的。它不是说翻译到中文就是“我恨你”，中文到了西方就是“我恨你”，不是那个，都是同一个方向的。
+奥地利政府自去年11月19日起宣布：从2021年 2 月 1 日起，任何 14 岁以上的人都必须接种疫苗。奥地利人必须在 3 月 15 日之前完成接种。拒绝接种者将每三个月缴纳 600 欧元的罚款，拒付者罚金将高到 3,600 欧元。希腊很快步奥地利后尘。希腊总理于 11 月底宣布自 1 月 16 日起，还没有接受第一针的人将面临 100 欧元的罚款，每月累加。
 
-12生肖，来了，我们的海瑟来了，海瑟我这一来我的妈呀，你们也太狠了吧，我刚讲到这就来一个大师级的，这是，我是她粉丝，绝对粉丝啊。昨天在她面前我想班门弄斧丢人了，你别打我脸，你别打我脸，七哥刚有点水，你别打脸，给点面子。
+印度尼西亚是第一个实施强制疫苗措施的亚洲国家。在 2021 年 2 月开始对所有成年人实施强制接种措施，其惩罚方式多种多样，取决于地方当局。在一些地区，居民因未接种疫苗而被拒绝发放驾照。或者中断社保金或者停止收发工作之必要信件。在首都雅加达，未接种疫苗的人最高可被罚款 290 欧元。这些强制措施导致的极端情况时有发生。2021 年 10 月 17 日，一名 19 岁女子报警遭到强奸，警方因为她没有疫苗接种证明而拒绝接警。
 
-所以说这12生肖还有这个星座它之间都是文化和人类文明的累积，特别是中国，中国共产党今天的红旗，大家记住这个红旗的概念，你一定研究研究红旗在大汉朝，是干什么的？还有在中国的历史上红是代表着什么？
+新加坡地方当局则将某些责任推卸给未接种者个人。所有入住重症监护病房的未接种病人都必须自己支付住院费用，约为 16,200 欧元。
 
-红中五星出现的黄，共产党是人类上最相信，就是所谓的它不相信的神，还有风水的，盘古这个从龙头在冬奥会之前，变成了男人的生殖器，割皮的包头，它不是这是真的，它不是玩笑，不是黄色笑话，你觉得它荒唐到什么程度啊？我的妈呀，央金拉姆也来啦，吓死人啦。
+在巴基斯坦的旁遮普省，当局对未接种疫苗的人实施了断网。自 6 月 10 日起，未接种疫苗的人发现他们的 SIM 卡被封，而手机是该国最常用的上网方式。
 
-哎呀，我的天哪，这是啥这是？这说着说着你看看，这海瑟大师，今天都全来吃的了，全都有助于水啊。所以说你看中国的共产党的红旗，红跟什么对冲，知道吗？最冲的，红旗最怕的就是水，火里边最怕的就是水，壬寅之年是共产党最怕的，甲子年它害怕，虎年它害怕。
+在北美洲，加拿大联邦当局自 1 月 2 日起暂停了未接种者的失业救济金。联邦就业部长 Carla Qualtrough以保护就业和经济为名，要求民众接受其强制疫苗的“主导政策 ”。作为联邦政体的加拿大，每个省都有权颁布额外的政策措施。魁北克走得更远。蒙特利尔当局宣布，疫苗护照将扩展到烟酒售卖领域，而烟酒行业都由当局控制。这一措施将在未来几天内公布。
 
-彭丽媛属虎的，习近平是属蛇的，你记住他们，包括王岐山这个属老鼠的，和七个常委，你看每个人的属相，包括共产党现在你知道共产党干了什么事？在天坛，在天坛每年大年三十，在北京住的战友你告诉我哪有一年大年三十晚上天坛没动静了？大家去想想为什么有动静？中共的领导人雍和宫必去，天坛必祭必拜，没有一个人不上。
+法国政府也步步紧逼，1月6日早晨5点，通过议会偷偷摸摸将健康护照变成强制性疫苗护照。
 
-北京唯一文化大革命没被摧毁的叫太监庙，香山下的太监庙叫中官村，中官村就是官员的官，过去的太监叫中官，后来中官就不好听，就翻成了中关，关头的关，关村，就是太监的村，老了退休去那的。
+世界各主流国家通过强制疫苗政策加速戕害国民，追杀觉醒的民众。这也恰恰显示了政府首脑、政客和中共勾结者们的心虚。他们欲盖弥彰，穷凶极恶，必将激起更多良知媒体和民众的觉醒，奋起反抗，终为其送葬。
 
-太监庙就在香山下面，跟这个戒台寺都没多远的，为啥共产党不去拜，他去雍和宫拜啥去？他不信佛他去天坛拜啥？我们海瑟大师一会儿给他讲讲，你讲讲，这他信的是真的像张高丽说的“宇宙无限大，地球一粒沙，我代表宇宙，你是沙，你是沙里边的沙”。
+新闻参考链接：
 
-风这个概念实际上就是大自然给你传递信息，就今天我们这叫上天给我们的信号，人类没有了风就必死无疑了。风干，你听说风干，你听说过火干过什么吗？风干。风干这个词什么时候来的？看看，大家看一看，最早的玉淙、玉钺、夏文化里边有个风，叫风潮，风不是疯掉的疯，封关的封，是风潮。
+[https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde](https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde)
 
-为什么叫风潮？风是代表大自然的信息，是人类生存的最重要力量之一，是金木水火土的最重要的其中之一，是人类的元素。风不是元素，水和风，还有木，还有火。
-
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
-
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
