--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,23 +1,22 @@
 ---
-title: 5725万剂次，北京平均每人接种3.5针毒疫苗
+title: 杭州机场一俄货机起飞时失火
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835906/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836059/)
 
-撰稿：东京樱花团/盐和光
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-25.jpg)[图片来源](https://www.bbc.com/zhongwen/simp/chinese-news-56737307)
-1月8号北青网报道，根据北京市卫健委刚刚发布的消息，截至2022年1月7日，北京市累计报告接种中共病毒（新冠病毒Covid-19）疫苗5725.15万剂次，累计接种2247.80万人。
+撰稿：追着曙光跑
 
-北京简称“京”，古称燕京、北平，是中共国的首都。2021年人口普查北京总人数：全市总人口（常住人口）为2189.3095人，而累计接种2247.80万人，接种人口已超出全市常住人口60万，接种新冠病毒疫苗5725.15万剂次，北京平均每人接种3.5针。
+据中共国新华社杭州1月8日电，8日早晨4点左右，由杭州飞往俄罗斯新西伯利亚马切沃机场的俄罗斯航星航空4B6534货机，在准备起飞前退出机位时突发舱内明火情况。经紧急处置，机上8名机组人员全部被救出后转移。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-08-at-20.07.23.jpeg)图片来源：网易视频截频
+起火飞机型号为图波列夫TU-204，为俄罗斯自产飞机，全球数量极少。起火后，飞机已断成两截。
 
-中共病毒是血液和呼吸系统传播的病毒，中共毒疫苗就是通过注射传播的血液病毒，打一针中共病毒疫苗就像是打一针艾滋病毒针一样，刺突蛋白里包含艾滋病基因片段，毒疫苗没有通过动物试验。在动物试验阶段，所有动物100%死亡，试验老鼠2个月内100%死亡，然后试验猴子，也是100%死亡，打完疫苗之后它随着血液扩散到全身，最后到达微细血管，微细血管本身就很狭窄，刺突蛋白诱发免疫系统攻击血管壁细胞，导致微细血管进一步变窄和阻塞，无法输送携氧红血球，组织缺氧、发炎、坏死，平均每人三针半的剂量，中共病毒和毒疫苗将要屠城，以后的北京人将要濒临灭绝。
+据舱单信息，该货机装载有普通货物约20吨，配载航油约26吨。目前，相关险情已成功排除，起火具体原因相关部门正在进一步调查中。
 
-消息来源：
+新闻来源：[杭州机场一俄货机起飞时失火断成两截，型号全球数量极少](https://www.163.com/dy/article/GT6P0MB6053469LG.html)
+[杭州机场快速处置一起外航货机起火事件](http://www.news.cn/local/2022-01/08/c_1128244742.htm)
+[关于杭州机场一起不安全事件的情况通报](http://hd.caac.gov.cn/HD_DQYW/202201/t20220108_210816.html)
 
-[【北京累计报告接种新冠疫苗5725.15万剂次】](https://t.ynet.cn/baijia/32022705.html?sdkver=2c9d920d)
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
