--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,36 +1,29 @@
 ---
-title: 01/08每日播报&#124;播客巨星乔·罗根加入盖特后引起注册浪潮
+title: 在华日本公司频频受罚 对抗中共，日本需坚定立场
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836215/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836409/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
+撰稿：东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-27.jpg)
+中共当局已经开始了一系列针对在华日本公司的案例。7日，便利店巨头7-Eleven的中国子公司已被罚款15万元人民币。理由是该公司在中共国的官方网站上发布了一张将台湾视为 “独立国家 “的地图。
 
-**2022-01-0**8
+根据北京市政府的文件，该处罚的日期是去年12月21日。此外，中共当局还指出，地图中未标明钓鱼岛，并且对西藏自治区边界线和中国南海的标记也有问题，故根据《地图管理条例》，该公司被判定触犯法律。
 
-据《华盛顿邮报》1月7日报道，在播客巨星乔·罗根(Joe Rogan)加入后的几天内，盖特已经有超过 100 万新用户注册。
+无印良品也曾在2018年1月被勒令处理相关商品，因为样品地图上没有包括钓鱼岛及中国南海的岛屿。集团公司也因在衣架商标印刷 “原产国 台湾”而被罚款。
 
-报道称，盖特是一个吸引保守社交媒体用户的社交平台。罗根周日在该网站上发表了第一篇帖子的5天后，该平台的新用户已经达到了 100 万大关，。盖特发言人埃博尼·鲍登 (Ebony Bowden) 称，这使盖特网站的用户总数已经超过 了400 万。
+去年，索尼的中国子公司也被罚款100万元人民币，只因广告将在7月7日推出一款新产品，而这一天恰好是中日战争导火索—卢沟桥事件纪念日。
 
-虽然罗根先生目前仍然拥有一个推特帐户，但是在乔治亚州众议员玛乔丽·泰勒-格林（Marjorie Taylor-Greene）的账号在周日被推特封号后，他考虑到了推特的审查制度，于是他加入了盖特。
+时事评论员表示，由于中共房地产市场的恶化，中央和地方政府陷入严重财政困难，中共目的是通过对国内外公司的罚款来增加收入。对中共而言，日本公司比美国公司拥有更多的指控借口，而且日本政府频频示弱，中共屡屡得逞。所以日本政府有责任保护其公司，关键问题应该坚定立场。
 
-罗根先生在他的第一个盖特帖子中写道：“为了防止推特上的东西变得更蠢，我现在也在这里。欢呼吧！”
+信息源:
 
-据报道，在罗根先生加入盖特的第二天，也就是 1 月 3 日，盖特到注册人数就达到了 343,000，这是该网站自 7 月推出以来的最大单日注册量。 鲍登还补充说，盖特并没有支付罗根加入该网站的费用。
+[「台湾」「尖閣」表記で現地のセブンイレブンに罰金　中国当局が日本企業に“言いがかり”　無印、ソニーに続き](https://news.yahoo.co.jp/articles/23798ea24c892ea01455111d452d83a3bcd72480)
 
-对于保守派来说，盖特网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
-同时盖特是一个国际平台。截至周五，盖特表示其在美国有220万用户，其次是巴西的50万用户，以及英国、德国和法国的大量用户。
 
-盖特的CEO杰森·米勒(Jason Miller)先生对《邮报》说：“这些数字证明，社交媒体用户开始意识到硅谷高管日益严厉的审查制度，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。”
-
-（秘翻新闻主编Grace编译报道）
-
-发布:星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
