--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,36 +1,21 @@
 ---
-title: 朝鲜致函称因疫情无法参加北京冬奥会
+title: 为何有脱北者选择回朝鲜？
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835807/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836003/)
 
-作者：纽约香草山文艺部 – 宁文静
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-当地时间1月7日，朝鲜奥委会致函中共国奥委会及冬奥组委会，称朝鲜将不参加北京冬奥会。
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/3-11.jpg)（图片来源于本文链接）
+在刚刚过去的元旦，一名2020年11月穿越非军事区进入韩国的脱北者循相同路线重回朝。此事引起韩国社会的广泛讨论。此事件被韩媒称为“回力镖叛逃”。韩国媒体批评军方守卫松散，玩忽职守. 一般而言，通过非军事区（DMZ）叛逃的情况极为罕见。在这个长达248公里，宽约4公里的边境地带，除了设有铁丝网外，两侧都有重兵把守，更设置了地雷和坦克陷阱。每当有人设法穿越非军事区而且未被察觉，韩国军方便会受到公众的强烈质疑与批评。韩国军方为此事道歉，韩国联合参谋本部议长元仁哲表示：“我对于这起事件感到非常抱歉。我承诺尽一切努力确保类似事件不再发生。”韩总统文在寅已下令对军队的整体安全布局进行特别检查。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/8-5.jpg)
+韩民众疑惑为何脱北者会选择回到一个生活极为艰难的国度，至少在外人的眼里是如此。据报道，该名返朝的脱北者只能做“门卫”，为了生计而挣扎。负责协助脱北者适应韩国社会的统一部则强调，除了金钱补助外，该名男子在寻找住宿和求职时都获得帮助，而享有医疗福利。尽管如此，在迄今逃往韩国的3万多名脱北者中，至少30人在过去10年间选择重返朝鲜。每个人回朝鲜的理由都不同。“有人觉得在这里保住工作很难；有人因为思念当地的亲人；还有人无法适应文化差异、难以适应韩国生活；有人不能通过文凭考试，迫不得已只能在餐厅打工；或是觉得受到歧视。”
 
-朝鲜在信函中，一方面指责了美国及其盟国，试图阻碍冬奥会顺利举办。另一方面却借全球新一轮疫情非常严重为由，同样拒绝参加本届冬奥会。
+信息来源：
 
-时评人士指出，早在2021年9月初，国际奥委会IOC就因为朝鲜拒绝参加东京夏季奥运会，而决定暂停朝鲜奥委会的成员资格至2022年底，使朝鲜无法以国家队选手的资格参加北京冬奥会，但IOC并未否决朝鲜选手以个人身份参加北京冬奥会的可能性。此时这封信函不仅显得多余，更有“伤口上撒盐”之嫌。
+[为何有脱北者选择回朝鲜？](https://www.dw.com/zh/%E4%B8%BA%E4%BD%95%E6%9C%89%E8%84%B1%E5%8C%97%E8%80%85%E9%80%89%E6%8B%A9%E5%9B%9E%E6%9C%9D%E9%B2%9C/a-60359568)
 
-参考链接：
-
-- [朝鲜：因全球疫情等原因无法参加北京冬奥会，但将全方位支持和声援中国](https://m.sohu.com/a/514860835_313745?scm=1104.0.0.0&amp;spm=smwp.home.fd-important.9.1641512406698kIPHEre)
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
-
-总编：文特
-编辑：Kathy文艺
-校正/发稿：海阔天空1
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
