--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,37 +1,30 @@
 ---
-title: 中共“温水煮百姓”，全民食草成常态
+title: 【Michael.Tonny专栏】揭露黑暗，消灭邪恶
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835806/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1835997/)
 
-作者：纽约香草山教育部 – Noemi
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-1月5日，郭先生在大直播节目中透露，习总加速师在内部会议中称，要维持住中共政权，必须要让国内的老百姓有饭吃，守住35%的就业红线，青菜和面粉起码要坚持两年。同时，中共政府已计划全国未来将有1至1.5亿人的非自然死亡。
+作者：加拿大温哥华扬帆农场[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
+在共惨独裁统治下， 像正常人一样说话，像正常人一样做事，对于中共国人来说，永远是一个遥不可及的梦！
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/9-3-scaled.jpg)
+共惨党说，无论您才高八斗还是学富五车，都不得担任法官、检察官、警察、公务员、公证员、司法鉴定人员、人民陪审员甚至是律师，祖孙三代不能入党、征兵，不得参加银行、国企、事业单位、军校和警校招聘。
 
-郭先生爆料，目前中共已存储供全国人食用18个月的储备粮。并且未来两年将以“温水煮青蛙”的方式，使全国老百姓逐步适应躺平、吃草的困窘状态。
+一日为奴、终生为奴！
 
-同时，在中共国内，数字人民币将作为唯一合法的加密货币，并取代掉纸质的人民币，成为中共用来消灭私人财富、控制墙内民生的有力武器。
+在中共魔鬼统治下，以合符正常人基本价值取向的逻辑判断，去思考和规划人生，带来的总会是千疮百孔！
 
-郭先生最后向墙内老百姓预警，虽然短期内中共国的物价、房价还会继续保持稳定，但普通民众将被逐渐分级，最低级的民众则会被中共消灭。且全国各地还将有更多的老百姓像西安市里被残害的老百姓一样，一次次地被从城市隔离，一次次地被赶到深山老林，被赶到河边，最后悄悄地死去。这样的惨剧将在未来的一年中不断发生。
+对于中共国人来说，除了消灭共惨党，还有别的选择吗？
 
-参考链接：
+我没有共惨党员的圆滑和狡诈，我只想做一个正常人！曾经幻想各种各样的英雄，能拯救苍生，以至蝼蚁。
 
-- [2022年1月5日 文贵大直播：](https://gtv.org/video/id=61d59a1931a71619b57520a4)
+直到郭文贵先生的出现，我认定他就是我心中的盖世英雄！跟随郭文贵先生，加入新中国联邦，让我一次次躲过共惨体制下，每天发生的各种惨剧。
 
+我写的每一篇文章都只是一个具有正常逻辑思维能力的人，对正邪颠倒、善恶不分的世界，最朴素的思考。我每一天都想大声对共惨党说，“你完了”！没有华丽的词藻，只有正义对邪恶，光明与黑暗！
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
+无论您现在大隐于市，还是不得不暂时远走他乡，只要您“揭露黑暗，消灭邪恶”，您都是我心中的英雄！
 
-总编：文特
-校正/发稿：海阔天空1
+编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
