--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,24 +1,34 @@
 ---
-title: 莫德纳首席执行官：未来需要接种更多中共病毒疫苗加强针
+title: 快手就算大规模裁员最终也得跟着CCP一起破产
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1835785/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1835945/)
 
-#### 撰稿：彩虹
+撰稿：永遠の小学生文筝
+![](https://assets.gnews.org/wp-content/uploads/2022/01/802.jpg)图片来自网络
+**快手自去年底开始了大规模裁员**
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-7.jpg)图片来源：路透社
-1月7日，《新闻极限》报道，周四，莫德纳（Moderna）公司的首席执行官（CEO）斯特凡·班塞尔（Stephane Bancel）在高盛集团公司（Goldman Sachs）组织的医疗会议上说，未来几个月，针对中共病毒（COVID-19）的疫苗加强针的功效可能会下降，人们需要在2022年秋季再打一次加强针。
+根据澎湃新闻的报导，短视频APP公司快手科技的员工向其透露，快手始于去年年末的仍在继续，有的部门裁员比例多达30%。2021年9月28日发布的快手内部邮件显示，快手有国际化、商业化、电商、游戏四大部门，据说这波裁员中都有一定比例的员工被裁。虽然是想通过裁员减少支出，但最终仍旧会被中共搞死。
 
-班塞尔说，该公司正在研究一种针对中共病毒变体奥米炕（Omicron）的候选疫苗，但不太可能在未来两个月内上市。
+**快手缩减成本的各种动作**
 
-他认为：“我仍然相信我们将在2022年秋季和未来需要（更多中共病毒）疫苗加强针”。
+为了缩减成本快手进行了各种不得人心的政策，调整租房补贴范围，取消了免费的三餐以及下午茶。此前还被曝出上海、广州、深圳、北京的商业化团队部分业务条线要被取消，其余的要在12月底前搬到杭州，并要求一部分员工在搬家和离职之间选择。
 
-文章指出，通过重复接种中共病毒疫苗而获益的莫德纳公司，其第三季度财报显示，2022年美国销售中共病毒疫苗加强针的市场销售额（预计）可能会达到20亿美元。
+**快手股票的走势说明是个垃圾股**
 
-**新闻来源**
+从快手上市以来的走势就可以看出这不是家有优质产品的公司，只是作为互联网中常见的被资本包装后用来套钱的概念公司而已。对于跟风进入的散户而言，最终只是替别人接盘而已。当资金背后的中共利益集团套现之后，快手只会成为持续下跌的垃圾股。
 
-[Moderna CEO Bancel Says People May Need Another Booster in Fall of 2022](https://www.newsmax.com/newsfront/moderna-vaccine-covid/2022/01/07/id/1051419/)
+**快手与其他互联网公司最终会被中共收走**
 
+去年多家互联网企业都经历了大规模裁员，跟习近平要将国家带向北朝鲜模式分不开。习近平希望的是影视、音乐、艺人等都为共产党服务，创造歌颂党的作品。像游戏这种跟党抢人脑地盘的行业，自然是无法允许其存在的，党需要的是党文化控制下的人民，也就是听话的奴隶，对游戏上瘾的人可不会任劳任怨。
+
+参考消息：
+
+[中國短影音巨頭再傳裁員30% 規模擴及4大事業部門](https://udn.com/news/story/7333/6011532?from=udn-catebreaknews_ch2)
+
+[快手再曝裁员：覆盖四大事业部，个别团队裁员比例30%](https://www.thepaper.cn/newsDetail_forward_16137691)
+
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
