--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,34 +1,27 @@
 ---
-title: 一周中共病毒及疫苗伤害信息汇总
+title: 朝鲜致函称因疫情无法参加北京冬奥会
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835674/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835807/)
 
-作者：纽约香草山农场医疗部 – Zion文恩
+作者：纽约香草山文艺部 – 宁文静
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-2021年12月28日至2022年1月4日，除中共国外，全球新增确诊中共病毒一千二百三十九万余例，同比上周增长百分之88.9，增长率较上周的百分之35.6增幅近3倍；本周新增死亡病例四万两千一百六十七例，同比上周下降百分之4.88。
+当地时间1月7日，朝鲜奥委会致函中共国奥委会及冬奥组委会，称朝鲜将不参加北京冬奥会。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/10-1-scaled.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/8-5.jpg)
 
-截止1月4日，全球除中共国累计接种65.1亿剂中共病毒疫苗，同比上周增长百分之2.02；疫苗接种的增长率较上周的百分之2.23相比没有显著差异。连续三周全球疫苗接种已趋于稳定。
+朝鲜在信函中，一方面指责了美国及其盟国，试图阻碍冬奥会顺利举办。另一方面却借全球新一轮疫情非常严重为由，同样拒绝参加本届冬奥会。
 
-中共国内，西安当局持续采取封城措施，并规定于1月4日实现 “社会清零”；截止1月3日，西安市共计集中隔离4万余人；疫情肆虐之余，在中共“一刀切”的强制管控措施下，西安民众普遍陷入严重的人道危机。据墙内知情者爆料，部分地区已出现以田鼠充饥的行为。此外，河南郑州、禹州，浙江宁波等地也出现不同程度的疫情爆发，各地中共政府纷纷采取强制管控措施。另据郭文贵先生揭露，北京冬奥会场馆曾出现疑似病例，导致当地启动紧急防疫预案。
-
-国际方面，在奥米克戎毒株肆虐之际，1月3日，法国南部出现了新型变异毒株——IHU，目前，该毒株的相关信息尚在观察中，初步预测该毒株可能比奥米克戎毒株的传染力更强。
-
-本周是2022年的第一周，各国的强制疫苗政策仍在疯狂进行中。1月3日，美国食品药品管理局FDA批准为12至15岁青少年辉瑞疫苗接种疫苗加强针；加拿大于劳工部于本周表示，失去工作的未接种疫苗者可能将无资格申请失业金；奥地利已向议会呈交疫苗强制法律草案，该法案规定所有公民须每三个月接种一次“中共病毒”疫苗，逾期不接种者将会涉及行政或司法惩处；土耳其也开始在本周推行第五剂加强针。
-
-与此同时，全球各地的反抗强制疫苗接种仍在持续。令人痛心的是，1月3日，澳洲墨尔本一男子不惜以自焚的方式反抗澳大利亚当局的强制疫苗政策。据悉，该男子伤势严重，但目前状况稳定。
+时评人士指出，早在2021年9月初，国际奥委会IOC就因为朝鲜拒绝参加东京夏季奥运会，而决定暂停朝鲜奥委会的成员资格至2022年底，使朝鲜无法以国家队选手的资格参加北京冬奥会，但IOC并未否决朝鲜选手以个人身份参加北京冬奥会的可能性。此时这封信函不仅显得多余，更有“伤口上撒盐”之嫌。
 
 参考链接：
 
-- [Weekly confirmed COVID-19 cases](https://ourworldindata.org/grapher/weekly-covid-cases?tab=chart&amp;time=2021-12-28..latest&amp;country=USA~IND~JPN~ISR~BRA~KOR~South+America~Africa~Asia+excl.+China~World+excl.+China)
-- [Weekly confirmed COVID-19 deaths](https://ourworldindata.org/grapher/weekly-covid-deaths?tab=chart&amp;time=2021-12-28..latest&amp;country=USA~ZAF~RUS~ISR~IND~GBR~World+excl.+China)
-- [COVID-19 vaccine doses administered](https://ourworldindata.org/grapher/cumulative-covid-vaccinations?time=2021-12-28..latest&amp;country=IND~RUS~USA~JPN~ISR~Asia~Africa~World+excl.+China~Europe)
+- [朝鲜：因全球疫情等原因无法参加北京冬奥会，但将全方位支持和声援中国](https://m.sohu.com/a/514860835_313745?scm=1104.0.0.0&amp;spm=smwp.home.fd-important.9.1641512406698kIPHEre)
 
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
 
-编辑：雪梨
+总编：文特
+编辑：Kathy文艺
 校正/发稿：海阔天空1
 
 **更多资讯，更多关注**
