--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,24 +1,37 @@
 ---
-title: 纽约州州长强制所有医护人员接种中共病毒疫苗加强针
+title: 中共“温水煮百姓”，全民食草成常态
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1835656/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835806/)
 
-#### 撰稿：彩虹
+作者：纽约香草山教育部 – Noemi
+![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
+1月5日，郭先生在大直播节目中透露，习总加速师在内部会议中称，要维持住中共政权，必须要让国内的老百姓有饭吃，守住35%的就业红线，青菜和面粉起码要坚持两年。同时，中共政府已计划全国未来将有1至1.5亿人的非自然死亡。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-6.jpg)图片来源：纽约邮报
-《新闻极限》1月7日发布文章，报道纽约州州长凯西·霍赫尔（Kathy Hochul）周五说，她要求所有医护人员在符合条件的14天内接种中共病毒（COVID-19）疫苗加强针。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/9-3-scaled.jpg)
 
-据CNN报道，在一次新闻发布会上，她说纽约将是第一个强制要求医护人员注射中共病毒加强针的州。此前，纽约的医护人员被强制要求在2021年9月份完全接种中共病毒疫苗。
+郭先生爆料，目前中共已存储供全国人食用18个月的储备粮。并且未来两年将以“温水煮青蛙”的方式，使全国老百姓逐步适应躺平、吃草的困窘状态。
 
-霍赫尔说：“医护人员将被（强制）要求这样做，除了医疗豁免外，没有其他豁免，也没有可以通过测试来规避的选择”。
+同时，在中共国内，数字人民币将作为唯一合法的加密货币，并取代掉纸质的人民币，成为中共用来消灭私人财富、控制墙内民生的有力武器。
 
-另根据《彭博社》的报道，这位民主党州长的命令计划将需要得到州卫生规划委员会的签署，但是，这位州长仍然相信她的计划会迅速得到批准。州卫生规划委员会将在下周二的一次特别会议上审议讨论该计划，如果最后获得批准，该命令将立即生效。
+郭先生最后向墙内老百姓预警，虽然短期内中共国的物价、房价还会继续保持稳定，但普通民众将被逐渐分级，最低级的民众则会被中共消灭。且全国各地还将有更多的老百姓像西安市里被残害的老百姓一样，一次次地被从城市隔离，一次次地被赶到深山老林，被赶到河边，最后悄悄地死去。这样的惨剧将在未来的一年中不断发生。
 
-**新闻来源**
+参考链接：
 
-[NY Gov. Hochul Mandates Boosters for All Healthcare Workers](https://www.newsmax.com/us/hochul-new-york-healthcare-workers-boosters/2022/01/07/id/1051491/)
+- [2022年1月5日 文贵大直播：](https://gtv.org/video/id=61d59a1931a71619b57520a4)
 
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
+
+总编：文特
+校正/发稿：海阔天空1
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
