--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,46 +1,25 @@
 ---
-title: 泰勒·格林痛斥DC沼泽——我不相信我们的政府
+title: 习近平赞扬哈萨克斯坦镇压反抗者
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836214/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836408/)
 
-翻译： Jenny Ball
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-87.png)图片来源网站
+《日本电视新闻》1月8日消息，在哈萨克斯坦，安全部队向抗议燃油价格上涨的示威者开枪。国际社会对造成大量人员伤亡严重关切中，中（共）国习近平1 月7日向哈萨克斯坦总统托卡耶夫表示，他完全支持当局对示威者的武装镇压。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-498.png)图片来源:thegatewaypundit.com
+习近平赞扬托卡耶夫在关键时刻采取了大胆有力的措施，迅速平息了局势，同时他还表示，坚决反对外部势力故意在哈萨克斯坦制造动乱。
 
-由于腐败的 华盛顿DC 沼泽一直忙于在 1.6 周年纪念日上表演党派戏剧，甚至一些共和党黑客也加入了进来——泰德·克鲁兹（Ted Cruz）就是其中之一——众议员马特·盖茨（Matt Gaetz）和玛乔丽·泰勒·格林(Marjorie Taylor Greene)正在驳斥他们的剧本，并揭穿建制派的谎言。
+习近平将外国势力干预镇压香港民主抗议活动作为其政府行动的一个理由，试图为他的暴政做辩护，并扩大其在中亚的影响力。
 
-可悲的是，盖茨和格林似乎是极少数关心 1.6 事件真相的民选代表——甚至是极少数关心那些作为政治犯被政府劫持为人质的美国公民。
+信息源：
 
-其他共和党人在哪里？ 他们不可能都像丹·克伦肖（Dan Crenshaw）一样，对吗？
+[中国・習主席　カザフスタン武力鎮圧を称賛](https://news.yahoo.co.jp/articles/cd87633969c9e3f840d2d96df4d3dd9b024c9f6a)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-500.png)图片来源:thegatewaypundit.com
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
-周四，盖茨和格林举行了新闻发布会，两人在会上提请注意 1 月 6 日因政治信仰被违宪关押在特区古拉格(DC Gulag) 监狱的人们。
 
-与其称美国公民为恐怖分子，并与1/6的宣传一起上——再次看看你泰德·克鲁兹——美国第一双人组 DC 沼泽，对爱国者进行可怕和专横的追捕，使数百名美国人被捕入狱。
-
-在盖茨浏览了1/6 的几段视频后，这些视频在很大程度上被大型科技公司和媒体压制了，格林质疑联邦调查局为什么没有逮捕臭名昭著的1/6催化剂雷-埃普斯和其他几个在1/6可能由联邦调查局策划的事件中发挥主要作用的人。
-
-最后，格林说FBI 和 DOJ 需要好好解释。
-
-“当我经过 DC 监狱时，我会告诉你，我没有看到谁——我没有看到雷·埃普斯（ Ray Epps），我没有看到他在那里浪费了几个月的时间，**被剥夺了正当程序的权利，被剥夺了见家人、接受治疗、理发和刮胡子的能力**。我没看到他在那里面。
-
-你知道我还没有看到谁吗？我没有看到那个叫 约翰·沙利文（John Sullivan）的人——**一个参加过“安提法”(Antifa)、黑命贵(BLM)骚乱和整个运动的人，但却突然在 1 月 6 日决定成为川普的支持者**。
-
-[他] 是在国会大厦射击阿什莉·巴比特（Ashley Babbitt） 谋杀犯，然后将他的视频出售给媒体的那个人。他不在副监狱长凯瑟琳·兰德金（Kathleen Landerkin）华盛顿的监狱里，所以，我认为我们有很多问题要问，**应该回答这些问题的人，是我们的 ****FBI ****和我们的司法部。**”
-
-在目睹了整整一年之后，格林直截了当地说：“我不再相信我们的政府了。”
-
-盖茨和格林关于 DC 政治犯的整个新闻发布会，可以在文章素材链接查看。
-
-新闻来源 :[thegatewaypundit.com] [WATCH: MTG SLAMS Corrupt DC Swamp During Press Conference About Jan 6th Prisoners – “I Do Not Trust Our Government”](https://www.thegatewaypundit.com/2022/01/watch-mtg-slams-corrupt-dc-swamp-press-conference-jan-6th-prisoners-not-trust-government/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
