--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,50 +1,34 @@
 ---
-title: 澳23岁双重接种的举重冠军死于COVID-19
+title: 大直播后记：共产党让你永远活在一个噩梦中
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836117/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836377/)
 
-翻译： Jenny Ball
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/噩梦-1.png)图片来源：Getty Images
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-494.png)图片来源 :thegatewaypundit.com
 
-根据一份报告，一名 23 岁的科学家、举重冠军和健康运动员在检测出 Covid-19 呈阳性后，在悉尼一家医院死亡。
+整理：雅典娜速记组
+编辑：Mttfly
 
-詹姆斯·康迪利奥斯（James Kondilios）是堪培拉的居民，在因病毒并发症于 1 月 4 日在圣文森特医院去世之前，已知他没有任何潜在的健康问题。
+**2022年1月5日文贵大直播**
 
-在新南威尔士州卫生当局透露他的身份后，他的家人和朋友都在哀悼并表示敬意。
+共产党就让你永远活在一个噩梦中，永远不说你会醒来，你就一直做下去，直到你做恶梦，死在噩梦里为止。就像今天，你看到了西安人笑嘻嘻地被（关）集中营一样，就像那个猪、鸭子被赶上架一模一样。但是你要看到台湾人不信邪，台湾人认为骚扰我做噩梦是吧？我知道你这玩意是假的，有风水都迷信。香港人不信邪啊，新疆人现在也反抗，西藏人反抗了，还有世界上很多人反抗，我们新中国联邦就是告诉所有的人真相的地方。
 
-他的一位朋友在 Facebook 上发布了一条情感信息作为致敬：
+我们要做美丽的梦、春梦、有水的梦，不要做噩梦，而且我们知道梦醒来就是更好的人生。还有一个更重要的事情，我们不是迷信，我们相信有风水。风就是阳，水就是阴，这是为什么奥林匹克村出来了水龙，盘古的阳龙，他为什么把龙头变成了包头？如果他也不信，他就不这么干了，就像把佛手要拿走一样，在冬奥会以前，现在是发生了什么？
 
-（更新 – 致敬后来被删除）
+大家记住，在全人类都没有的情况下，现在发生了一个你们刚才看到一开始的盖特。黄皮肤人，中国人从来没有在宇宙中占过今天的位置，全宇宙当中从来没有发生过。咱们这些人不流血，能让全世界开始消灭邪恶的力量，就是阳光。太阳将出来，黑暗将消去，那就是我们更重要的事情。只有我们没打疫苗，你没想过这个问题有多大了吗？现在所有的人都在问一个问题，为什么我打2针、3针疫苗，从来没出去过我却染上病了？疫苗就是病毒，mRNA就是病毒。你不用被传染，你就是病毒。就在刚才我直播的时候，欧洲的某个领导人说他老婆染上了。他说：“Miles我打了三针，我太太从没出去过却染上了。”我说我告诉你，mRNA就是你身体的毒，它只是什么时候发作而已。
 
-“非死不可”说发文已不可访问
+你们没被打疫苗是多伟大！为什么七哥在2017年就说精子卵子值钱，现在涨了几万倍是吧？还想想你们还有这币那币、还有现在、还有盖特，毫不夸张的说，（这是）人类的奇迹！风水都在我们这一方啊！就像后面蝴蝶般的玫瑰花、七哥的领带、七哥站在这给你们直播几个小时（这件事），这都不是常人所能解释的。我们的生命无限精彩，**一定要记住，爱、诚实和灭共是我们在一起的根本基础，只有这三样东西会让我们走的更远，否则一切都会失去啊！**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-496.png)图片来源 :thegatewaypundit.com
+*发布：Mttfly*
 
-他最近的死亡提出了一个问题，如果他因为接种了双重疫苗，并且没有潜在的健康状况，但受到保护免受 COVID-19 病毒的疫苗的侵害，那么会发生什么？这打破了疫苗将保护您免受病毒侵害的整个说法。
+**
+****更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-福奇博士、药企，企业媒体和公共卫生机构，从一开始就一直在对 Covid 撒谎。
-
-**他们说疫苗会阻止病毒传播**。
-
-**他们说接种疫苗的人可以不戴口罩。**
-
-**他们说接种疫苗的人不会重病。**
-
-**他们说接种疫苗的人不会死亡。**
-
-任何还在信任专家的人都应该得到他们的帮助。我们从一开始就试图用理智、逻辑，和实际统计数据，与他们进行这场对话，**我们应该为我们失去的自由、时间和财富而得到补偿。**
-
-医疗行业、公共卫生行业、学术界和政府的合法性已被 Covid 抹去。在“卡内科亚大帝” (KanekoaTheGreat)的这段视频汇编中观看他们的谎言。
-
-新闻来源 :[thegatewaypundit.com] [Double Vaccinated 23-Year-Old Powerlifter Champion with No Underlying Health Condition Dies from COVID-19 in Australia](https://www.thegatewaypundit.com/2022/01/double-vaccinated-23-year-old-powerlifter-champion-no-underlying-health-condition-dies-covid-19-australia/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
