--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,46 +1,25 @@
 ---
-title: 泰勒·格林痛斥DC沼泽——我不相信我们的政府
+title: HBO VICE ISOBEL YEUNG的采访是对郭文贵先生有计划的诽谤 Part-15
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836214/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836342/)
 
-翻译： Jenny Ball
+编辑: 飞虹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/新-1.png)
+过去两周，我们针对HBO VICE 播放的恶意诋毁郭文贵先生的、所谓记者ISOBEL YEUNG的采访视频，通过还原真相进行了有力回击。新中国联邦创始人郭先生带领的爆料革命，向西方世界揭露中共CCP的邪恶并多次发出警告，最终得到验证，展示了新中国联邦和郭先生的真实实力。这是HBO，也是世界上任何一个流氓媒体无法掩盖和诋毁的真相。今天，我们再次回顾郭先生的伟大作为和ISOBEL YEUNG的真实面目，作为这个系列视频的结尾。（*播放视频：9’15”*）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-502.png)
+新闻链接: https://www.gettr.com/post/pkgm7effe9
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-498.png)图片来源:thegatewaypundit.com
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
 
-由于腐败的 华盛顿DC 沼泽一直忙于在 1.6 周年纪念日上表演党派戏剧，甚至一些共和党黑客也加入了进来——泰德·克鲁兹（Ted Cruz）就是其中之一——众议员马特·盖茨（Matt Gaetz）和玛乔丽·泰勒·格林(Marjorie Taylor Greene)正在驳斥他们的剧本，并揭穿建制派的谎言。
+校正/发稿：浪迹天涯
 
-可悲的是，盖茨和格林似乎是极少数关心 1.6 事件真相的民选代表——甚至是极少数关心那些作为政治犯被政府劫持为人质的美国公民。
-
-其他共和党人在哪里？ 他们不可能都像丹·克伦肖（Dan Crenshaw）一样，对吗？
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-500.png)图片来源:thegatewaypundit.com
-
-周四，盖茨和格林举行了新闻发布会，两人在会上提请注意 1 月 6 日因政治信仰被违宪关押在特区古拉格(DC Gulag) 监狱的人们。
-
-与其称美国公民为恐怖分子，并与1/6的宣传一起上——再次看看你泰德·克鲁兹——美国第一双人组 DC 沼泽，对爱国者进行可怕和专横的追捕，使数百名美国人被捕入狱。
-
-在盖茨浏览了1/6 的几段视频后，这些视频在很大程度上被大型科技公司和媒体压制了，格林质疑联邦调查局为什么没有逮捕臭名昭著的1/6催化剂雷-埃普斯和其他几个在1/6可能由联邦调查局策划的事件中发挥主要作用的人。
-
-最后，格林说FBI 和 DOJ 需要好好解释。
-
-“当我经过 DC 监狱时，我会告诉你，我没有看到谁——我没有看到雷·埃普斯（ Ray Epps），我没有看到他在那里浪费了几个月的时间，**被剥夺了正当程序的权利，被剥夺了见家人、接受治疗、理发和刮胡子的能力**。我没看到他在那里面。
-
-你知道我还没有看到谁吗？我没有看到那个叫 约翰·沙利文（John Sullivan）的人——**一个参加过“安提法”(Antifa)、黑命贵(BLM)骚乱和整个运动的人，但却突然在 1 月 6 日决定成为川普的支持者**。
-
-[他] 是在国会大厦射击阿什莉·巴比特（Ashley Babbitt） 谋杀犯，然后将他的视频出售给媒体的那个人。他不在副监狱长凯瑟琳·兰德金（Kathleen Landerkin）华盛顿的监狱里，所以，我认为我们有很多问题要问，**应该回答这些问题的人，是我们的 ****FBI ****和我们的司法部。**”
-
-在目睹了整整一年之后，格林直截了当地说：“我不再相信我们的政府了。”
-
-盖茨和格林关于 DC 政治犯的整个新闻发布会，可以在文章素材链接查看。
-
-新闻来源 :[thegatewaypundit.com] [WATCH: MTG SLAMS Corrupt DC Swamp During Press Conference About Jan 6th Prisoners – “I Do Not Trust Our Government”](https://www.thegatewaypundit.com/2022/01/watch-mtg-slams-corrupt-dc-swamp-press-conference-jan-6th-prisoners-not-trust-government/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/新-1.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
