--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,28 +1,45 @@
 ---
-title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
+title: 郭文贵直播摘要和音频 2022.01.07
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1836329/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
+摘要撰稿人：文俊
 
-**2022-01-0**8
+音频提供者：左媛
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-501.png)
+### 视频链接：
 
-华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
+[https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
 
-一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
+### 音频链接：
 
-克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
+### 摘要：
 
-哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
+- 木兰身心健康
+- OMCON 对 COVID 病毒有一点缺点，OMICON 是假的
+- 疫苗mRNA（刺突蛋白）就是病毒
+- 拜登可能导致很大的必然会被否决
+- 中国消费金融危机流氓全球名人
+- 中共灭亡制造的金融危机，美国的资产可能会缩水50%-70%
+- 中共灭亡行动的全球经济危机，喜联储币重新书写了数字货币的游戏规则
+- 国内买钱的战友，一定要先KYC，不要因为买喜币影响安全，要买喜，大家可以帮忙，因为有战友在银行付款被警察威胁
+- 喜币如果没有锁币，目前的价格会统计币3块钱。战友们晃晃的“加锁”5块钱，伟大的太棒了
+- 共产党越打压新中国联邦护照，新中国护照越升值
+- 新中国联邦，爆料革命，郭文贵成为共产党绝对不能谈的词
+- 胡海峰是胡锦涛和习近平交易的结果，未来的接班人
+- 20大常委会：习太阳国家主席、胡春华总理、陈敏尔第一副总理、陈全国纪委书记、李晞政协主席、丁雪祥人大委员长
+- 二十个大常会公布内斗，没有江家人，贾庆林，栗战书会善罢甘休吗？
+- 北朝鲜参加奥会，金正恩对共产党冬大开放，100亿美元现金，进入，都无法完成中共的使命。而且很怕死（怕斩首）
+- “中美是否一战？我觉得火战热战应该是在冬奥会之后，可能会因为台湾问题
+- 病毒后新加波不会有李家
 
-（秘翻新闻主编 清风先生编译报道）
 
-发布:星星
 
-* * *
 
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
+
+
+编辑发布：闪电训练
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
