--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,75 +1,39 @@
 ---
-title: 特鲁多像希特勒对待犹太人一样将“未接种者”当作替罪羊
+title: 泰勒·格林痛斥DC沼泽——我不相信我们的政府
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836075/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836214/)
 
 翻译： Jenny Ball
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-489.png)图片来源：lifesitenews.com
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-498.png)图片来源:thegatewaypundit.com
 
-《生活新闻》(LifeSiteNews) – 乔·拜登总统和总理贾斯汀·特鲁多（Justin Trudeau）诽谤反对接受实验性 COVID-19 基因治疗注射的美国人和加拿大人，将他们作为他们实施封锁的替罪羊。
+由于腐败的 华盛顿DC 沼泽一直忙于在 1.6 周年纪念日上表演党派戏剧，甚至一些共和党黑客也加入了进来——泰德·克鲁兹（Ted Cruz）就是其中之一——众议员马特·盖茨（Matt Gaetz）和玛乔丽·泰勒·格林(Marjorie Taylor Greene)正在驳斥他们的剧本，并揭穿建制派的谎言。
 
-特鲁多甚至将没有接种疫苗的加拿大人贴上否认科学的“极端主义者”、“种族主义者”和“厌恶女性主义者”的标签。
+可悲的是，盖茨和格林似乎是极少数关心 1.6 事件真相的民选代表——甚至是极少数关心那些作为政治犯被政府劫持为人质的美国公民。
 
-尽管受到批评，但他们都变本加厉，错误地声称未接种疫苗的人应对封锁负责，而他们非常清楚“科学”已经表明，疫苗并不防止最新的 Omicron 变体的传播。
+其他共和党人在哪里？ 他们不可能都像丹·克伦肖（Dan Crenshaw）一样，对吗？
 
-特鲁多所做的，正是当年希特勒在对犹太人大屠杀前所做的，他正在把整个社会阶层当作替罪羊，煽动仇恨。这就是我们今天在世界上面临的巨大危险——这不是 COVID，这是暴政，它正在威胁着我们所有人，无论是接种疫苗还是未接种疫苗。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-500.png)图片来源:thegatewaypundit.com
 
-加拿大总理贾斯汀·特鲁多在魁北克的一个受欢迎的脱口秀节目中发表评论，煽动对反对 COVID 疫苗的加拿大人的仇恨。由于他对法语采访的评论是在 9 月发表的，所以直到上周在社交媒体上发布时，这些评论才迅速传播开来。
+周四，盖茨和格林举行了新闻发布会，两人在会上提请注意 1 月 6 日因政治信仰被违宪关押在特区古拉格(DC Gulag) 监狱的人们。
 
-特鲁多谈到“强烈反对疫苗接种的人”。
+与其称美国公民为恐怖分子，并与1/6的宣传一起上——再次看看你泰德·克鲁兹——美国第一双人组 DC 沼泽，对爱国者进行可怕和专横的追捕，使数百名美国人被捕入狱。
 
-他们“不相信科学，他们往往是厌恶女性的人，也常常是种族主义者。”我见过的对精神错乱特鲁多的最佳回应，是**来自加拿大最受欢迎的专栏作家雷克斯****·****墨菲（****Rex Murphy****）**，他在《国家邮报》撰稿。
+在盖茨浏览了1/6 的几段视频后，这些视频在很大程度上被大型科技公司和媒体压制了，格林质疑联邦调查局为什么没有逮捕臭名昭著的1/6催化剂雷-埃普斯和其他几个在1/6可能由联邦调查局策划的事件中发挥主要作用的人。
 
-“对反疫苗者的愤怒是典型的找替罪羊，”墨菲说。随后，雷克斯继续让特鲁多看到他都干了什么，也只有雷克斯才能做到。我多希望我能用雷克斯的经典来表达：
+最后，格林说FBI 和 DOJ 需要好好解释。
 
-谁在这场瘟疫开始时让机场保持开放？
+“当我经过 DC 监狱时，我会告诉你，我没有看到谁——我没有看到雷·埃普斯（ Ray Epps），我没有看到他在那里浪费了几个月的时间，**被剥夺了正当程序的权利，被剥夺了见家人、接受治疗、理发和刮胡子的能力**。我没看到他在那里面。
 
-谁说如果禁止来自中共国的航班就是“种族主义”？
+你知道我还没有看到谁吗？我没有看到那个叫 约翰·沙利文（John Sullivan）的人——**一个参加过“安提法”(Antifa)、黑命贵(BLM)骚乱和整个运动的人，但却突然在 1 月 6 日决定成为川普的支持者**。
 
-谁从共产主义中国订购了口罩？
+[他] 是在国会大厦射击阿什莉·巴比特（Ashley Babbitt） 谋杀犯，然后将他的视频出售给媒体的那个人。他不在副监狱长凯瑟琳·兰德金（Kathleen Landerkin）华盛顿的监狱里，所以，我认为我们有很多问题要问，**应该回答这些问题的人，是我们的 ****FBI ****和我们的司法部。**”
 
-谁的发言人说口罩无效？
+在目睹了整整一年之后，格林直截了当地说：“我不再相信我们的政府了。”
 
-然后谁的发言人又说必须戴口罩？
+盖茨和格林关于 DC 政治犯的整个新闻发布会，可以在文章素材链接查看。
 
-谁警告说不要集会，然后去参加“黑命贵”抗议活动？
-
-谁在早餐后从下议院关闭了议会，指挥伟大的加拿大国家的政府？
-
-谁在他管理的大流行期间召集了选举？
-
-谁可以称是真正的“种族主义者”：他4次被拍到把脸涂黑羞辱黑人？
-
-谁在领导了一个试图将武装部队中的性行为不端指控掩盖到桌下的政府之后，现在抛出“厌恶女性”这个词？
-
-墨菲粉碎了特鲁多的暴政，因为特鲁多破坏了自由。
-
-当这同一个人通过他的 COVID 法令破坏所有加拿大人的权利和自由宪章时，谁会问我们是否可以“容忍”他？
-
-在特鲁多的领导下，他父辈的荣耀宪章已经变成了纸巾。
-
-在加拿大的大部分地区，未接种疫苗的人
-
-可能不能去他们想去的地方，
-
-可能不能在痛苦的时刻探望家人，
-
-可能不能在没有证件的情况下旅行或进入公共场所。
-
-最重要的是，如果你拒绝接种疫苗，你就是最重罪和最卑鄙的人； 你就是贾斯汀·特鲁多眼中的反派：反疫苗者。
-
-**在消除拜登类似的疯狂上，谁能比塔克****.****卡尔森更好？**
-
-如果只有北美这样做，已经够糟糕了，但这种现象遍布全球。在法国，马克龙总理竟然公开表示，“那些没有打疫苗的人，我真的讨厌他们，我们将继续讨厌他们，直到最后，这就是策略。”
-
-马克龙走得更远，也许发表了更令人发指的声明：“当我的自由成为对他人自由的威胁时，我就成了一个不负责任的个人。一个不负责任的人，不再是公民。” 他指责“反疫苗者”犯下了“巨大的道德错误”。“他们正在破坏一个国家的稳固性，”他说。
-
-在菲律宾，拒绝接受 COVID 注射的公民被迫面临罚款和监禁的威胁，被迫留在家中。 在许多国家，他们被拒绝使用公共交通工具，一些国家甚至试图禁止他们进入杂货店买日用品。
-
-这是暴政！这正是希特勒对犹太人所做的。他把他们当作替罪羊，**剥夺他们的自由，公开羞辱他们**。谴责这种找替罪羊的宗教领袖的声音在哪里？这一切发生时，大多数宗教领袖怎么竟能保持沉默？是时候大声疾呼，谴责暴政了，否则暴政就真的来了。
-
-新闻来源 ：[lifesitenews.com] [Trudeau is scapegoating the ‘unvaccinated’ like Hitler did the Jews](https://www.lifesitenews.com/blogs/trudeau-is-scapegoating-the-unvaccinated-like-hitler-did-the-jews/)
+新闻来源 :[thegatewaypundit.com] [WATCH: MTG SLAMS Corrupt DC Swamp During Press Conference About Jan 6th Prisoners – “I Do Not Trust Our Government”](https://www.thegatewaypundit.com/2022/01/watch-mtg-slams-corrupt-dc-swamp-press-conference-jan-6th-prisoners-not-trust-government/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
 
 * * *
 
