--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,32 +1,28 @@
 ---
-title: 【Michael.Tonny專欄】揭露黑暗，消滅邪惡
+title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1836042/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
 
-作者：加拿大溫哥華揚帆農場[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
+**2022-01-0**8
 
-在共慘獨裁統治下， 像正常人一樣說話，像正常人一樣做事，對於中共國人來說，永遠是一個遙不可及的夢！
+华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
 
-共慘黨說，無論您才高八鬥還是學富五車，都不得擔任法官、檢察官、警察、公務員、公證員、司法鑒定人員、人民陪審員甚至是律師，祖孫三代不能入黨、徵兵，不得參加銀行、國企、事業單位、軍校和警校招聘。
+一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
 
-一日為奴、終生為奴！
+克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
 
-在中共魔鬼統治下，以合符正常人基本價值取向的邏輯判斷，去思考和規劃人生，帶來的總會是千瘡百孔！
+哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
 
-對於中共國人來說，除了消滅共慘黨，還有別的選擇嗎？
+（秘翻新闻主编 清风先生编译报道）
 
-我沒有共慘黨員的圓滑和狡詐，我只想做一個正常人！曾經幻想各種各樣的英雄，能拯救蒼生，以至螻蟻。
+发布:星星
 
-直到郭文貴先生的出現，我認定他就是我心中的蓋世英雄！跟隨郭文貴先生，加入新中國聯邦，讓我一次次躲過共慘體制下，每天發生的各種慘劇。
+* * *
 
-我寫的每一篇文章都只是一個具有正常邏輯思維能力的人，對正邪顛倒、善惡不分的世界，最樸素的思考。我每一天都想大聲對共慘黨說，“你完了”！沒有華麗的詞藻，只有正義對邪惡，光明與黑暗！
-
-無論您現在大隱於市，還是不得不暫時遠走他鄉，只要您“揭露黑暗，消滅邪惡”，您都是我心中的英雄！
-
-編輯：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上傳：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
-
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
