--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,21 +1,82 @@
 ---
-title: 为何有脱北者选择回朝鲜？
+title: 特鲁多像希特勒对待犹太人一样将“未接种者”当作替罪羊
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836003/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836075/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/01/3-11.jpg)（图片来源于本文链接）
-在刚刚过去的元旦，一名2020年11月穿越非军事区进入韩国的脱北者循相同路线重回朝。此事引起韩国社会的广泛讨论。此事件被韩媒称为“回力镖叛逃”。韩国媒体批评军方守卫松散，玩忽职守. 一般而言，通过非军事区（DMZ）叛逃的情况极为罕见。在这个长达248公里，宽约4公里的边境地带，除了设有铁丝网外，两侧都有重兵把守，更设置了地雷和坦克陷阱。每当有人设法穿越非军事区而且未被察觉，韩国军方便会受到公众的强烈质疑与批评。韩国军方为此事道歉，韩国联合参谋本部议长元仁哲表示：“我对于这起事件感到非常抱歉。我承诺尽一切努力确保类似事件不再发生。”韩总统文在寅已下令对军队的整体安全布局进行特别检查。
+翻译： Jenny Ball
 
-韩民众疑惑为何脱北者会选择回到一个生活极为艰难的国度，至少在外人的眼里是如此。据报道，该名返朝的脱北者只能做“门卫”，为了生计而挣扎。负责协助脱北者适应韩国社会的统一部则强调，除了金钱补助外，该名男子在寻找住宿和求职时都获得帮助，而享有医疗福利。尽管如此，在迄今逃往韩国的3万多名脱北者中，至少30人在过去10年间选择重返朝鲜。每个人回朝鲜的理由都不同。“有人觉得在这里保住工作很难；有人因为思念当地的亲人；还有人无法适应文化差异、难以适应韩国生活；有人不能通过文凭考试，迫不得已只能在餐厅打工；或是觉得受到歧视。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-489.png)图片来源：lifesitenews.com
 
-信息来源：
+《生活新闻》(LifeSiteNews) – 乔·拜登总统和总理贾斯汀·特鲁多（Justin Trudeau）诽谤反对接受实验性 COVID-19 基因治疗注射的美国人和加拿大人，将他们作为他们实施封锁的替罪羊。
 
-[为何有脱北者选择回朝鲜？](https://www.dw.com/zh/%E4%B8%BA%E4%BD%95%E6%9C%89%E8%84%B1%E5%8C%97%E8%80%85%E9%80%89%E6%8B%A9%E5%9B%9E%E6%9C%9D%E9%B2%9C/a-60359568)
+特鲁多甚至将没有接种疫苗的加拿大人贴上否认科学的“极端主义者”、“种族主义者”和“厌恶女性主义者”的标签。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+尽管受到批评，但他们都变本加厉，错误地声称未接种疫苗的人应对封锁负责，而他们非常清楚“科学”已经表明，疫苗并不防止最新的 Omicron 变体的传播。
+
+特鲁多所做的，正是当年希特勒在对犹太人大屠杀前所做的，他正在把整个社会阶层当作替罪羊，煽动仇恨。这就是我们今天在世界上面临的巨大危险——这不是 COVID，这是暴政，它正在威胁着我们所有人，无论是接种疫苗还是未接种疫苗。
+
+加拿大总理贾斯汀·特鲁多在魁北克的一个受欢迎的脱口秀节目中发表评论，煽动对反对 COVID 疫苗的加拿大人的仇恨。由于他对法语采访的评论是在 9 月发表的，所以直到上周在社交媒体上发布时，这些评论才迅速传播开来。
+
+特鲁多谈到“强烈反对疫苗接种的人”。
+
+他们“不相信科学，他们往往是厌恶女性的人，也常常是种族主义者。”我见过的对精神错乱特鲁多的最佳回应，是**来自加拿大最受欢迎的专栏作家雷克斯****·****墨菲（****Rex Murphy****）**，他在《国家邮报》撰稿。
+
+“对反疫苗者的愤怒是典型的找替罪羊，”墨菲说。随后，雷克斯继续让特鲁多看到他都干了什么，也只有雷克斯才能做到。我多希望我能用雷克斯的经典来表达：
+
+谁在这场瘟疫开始时让机场保持开放？
+
+谁说如果禁止来自中共国的航班就是“种族主义”？
+
+谁从共产主义中国订购了口罩？
+
+谁的发言人说口罩无效？
+
+然后谁的发言人又说必须戴口罩？
+
+谁警告说不要集会，然后去参加“黑命贵”抗议活动？
+
+谁在早餐后从下议院关闭了议会，指挥伟大的加拿大国家的政府？
+
+谁在他管理的大流行期间召集了选举？
+
+谁可以称是真正的“种族主义者”：他4次被拍到把脸涂黑羞辱黑人？
+
+谁在领导了一个试图将武装部队中的性行为不端指控掩盖到桌下的政府之后，现在抛出“厌恶女性”这个词？
+
+墨菲粉碎了特鲁多的暴政，因为特鲁多破坏了自由。
+
+当这同一个人通过他的 COVID 法令破坏所有加拿大人的权利和自由宪章时，谁会问我们是否可以“容忍”他？
+
+在特鲁多的领导下，他父辈的荣耀宪章已经变成了纸巾。
+
+在加拿大的大部分地区，未接种疫苗的人
+
+可能不能去他们想去的地方，
+
+可能不能在痛苦的时刻探望家人，
+
+可能不能在没有证件的情况下旅行或进入公共场所。
+
+最重要的是，如果你拒绝接种疫苗，你就是最重罪和最卑鄙的人； 你就是贾斯汀·特鲁多眼中的反派：反疫苗者。
+
+**在消除拜登类似的疯狂上，谁能比塔克****.****卡尔森更好？**
+
+如果只有北美这样做，已经够糟糕了，但这种现象遍布全球。在法国，马克龙总理竟然公开表示，“那些没有打疫苗的人，我真的讨厌他们，我们将继续讨厌他们，直到最后，这就是策略。”
+
+马克龙走得更远，也许发表了更令人发指的声明：“当我的自由成为对他人自由的威胁时，我就成了一个不负责任的个人。一个不负责任的人，不再是公民。” 他指责“反疫苗者”犯下了“巨大的道德错误”。“他们正在破坏一个国家的稳固性，”他说。
+
+在菲律宾，拒绝接受 COVID 注射的公民被迫面临罚款和监禁的威胁，被迫留在家中。 在许多国家，他们被拒绝使用公共交通工具，一些国家甚至试图禁止他们进入杂货店买日用品。
+
+这是暴政！这正是希特勒对犹太人所做的。他把他们当作替罪羊，**剥夺他们的自由，公开羞辱他们**。谴责这种找替罪羊的宗教领袖的声音在哪里？这一切发生时，大多数宗教领袖怎么竟能保持沉默？是时候大声疾呼，谴责暴政了，否则暴政就真的来了。
+
+新闻来源 ：[lifesitenews.com] [Trudeau is scapegoating the ‘unvaccinated’ like Hitler did the Jews](https://www.lifesitenews.com/blogs/trudeau-is-scapegoating-the-unvaccinated-like-hitler-did-the-jews/)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
