--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,19 +1,20 @@
 ---
-title: “以共灭共” 中共开年打两虎
+title: 中共算法推荐 必须忠于党 舆论社会性清零！
 ---
-`德国纽伦堡正义农场` [轉載自GNews](https://gnews.org/zh-hans/1836369/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/1836410/)
 
-作者：德国纽伦堡正义农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/01/打虎.jpeg)封面来源：网络图片
-2022年1月8日，中共中央纪委国家监委网站发布2名中管干部接受审查调查信息，“**西藏自治区政府副主席张永泽接受中央纪委国家监委审查调查**”，“**中国人寿保险（集团）公司党委书记、董事长王滨接受中央纪委国家监委审查调查**”，再次释放了全面从严治党永远在路上，把严的主基调长期坚持下去，党风廉政建设和反腐败斗争一刻不停的强烈信号。
+谷歌前CEO在近期接受采访时称，人工智能会根据用戶的喜好推荐东西，同时也被用于视频监控等领域来影响我们的生活。特别是向青少年推荐些有害的信息，强调并放大个人的偏好或观点,使得我们的生活方式和情感表达被人工智能左右。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/下载-3-2.jpg)
+如何让用户能更长时间停留在社交平台里，目前主要的做法是通过激怒用户，也就是中共常用的“拉仇恨”，但这种做法会危及民主。
 
-2022年1月6日，七哥盖特：乖乖哟… …梦游开始！【20大 习太阳 国家主席，胡春华总理，陈敏尔 第一副总理，陈全国 纪委书记，李晞 政协主席，丁薛祥 人大委员长… …】。七哥每次梦游都能让中共内部颤三颤，每次都能“梦成真”，七哥也说自己从来不分析，全是靠情报。让我们再次感谢默默无闻，甚至流血牺牲，为华人争取未来和希望的战友们。
+人工智能的推荐算法，已经广泛渗透到我们生活的各个角落，例如你在网络上看到的视频大约80%是推荐系统根据用户的过往浏览记录，自动给用户精准推荐你所喜欢的视频，其目的是让你浏览更多的视频来增加在线时间。当然这会让人忘掉时间的概念、丧失主动寻找信息的能力，并且增强被动接受推荐的内容。
 
-“以共灭共”进行时，中共开年打两虎，在中共国春节之前，在中共北京冬奥会之前，在中共二十大之前，让中共党内乌云盖顶，杀气腾腾。陈全国，中共刽子手，不降反升，释放信号非常明显，即藐视美国之前对陈全国的制裁，又对党内释放出“大清洗”信号，江、曾、王、孟等党内各山头都将被清洗。政治斗争的结果虽然是残酷的，老白姓也将是被裹挟的，但是对消灭中共体制是利好的。
+有意思的是，中共网信办新出臺的规定：算法推荐服务必须忠于党，就是一种政治色彩极其强烈的专制策略。您感兴趣的喜币，是不会被推荐的；您想了解西安疫情的发展，是在推荐算法之外的。中共的舆情分析软件非常可悲的、大量被用到了海外的推特、Facebook和油管等网络平台，监控海外华人、留学生和墙内翻墙的人，目的是无异议人士、无负面新闻等舆论社会性清零。
 
-新闻来源：🔗[开年打两虎：保持对腐败的压倒性力量常在](http://www.news.cn/legal/2022-01/08/c_1128244552.htm)
+中共在人工智能领域重点关注及领先的技术方面，如脑控技术、器官移植技术和视频监控人脸识别技术，都跟老百姓的生活福祉没任何关系，只是为了更好地控制和奴役老百姓来维护中共的统治。而这些海外的网络媒体平台出卖用户信息给中共，帮助中共在全球推广共产主义，完全背离了西方民主自由的价值观，只为了14亿人市场上赚钱。
 
-*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
+文案：wuxin
+校对：雪菜、文峰
 
  
 
