--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,25 +1,33 @@
 ---
-title: “枕头哥”林德尔就被传唤的手机记录起诉美众议院特别委员会
+title: 大直播后记：共产党让你永远活在一个噩梦中
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1836338/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836377/)
 
-**编译：花岗岩**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-08-193743.jpg)
-据零对冲1月7日报道，MyPillow首席执行官迈克·林德尔（Mike Lindell）起诉了调查1月6日国会大厦被入侵事件起源的美国众议院特别委员会，试图阻止电信公司威讯（Verizon）与该小组分享他的信息。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/噩梦-1.png)图片来源：Getty Images
 
-该诉讼于5日（周三）在美国明尼苏达州地方法院提起，并将威讯公司、美众议院议长南希·佩洛西和该小组的其他成员列入其中。
 
-林德尔是在众议院专门委员会向威讯发出传票后提起诉讼的，该传票要求威讯提供2020年11月1日至2021年1月31日期间林德尔经常使用的一部手机的所有通信记录。该手机号码是由威讯的用户My Pillow Inc.分配给林德尔先生使用的。
+整理：雅典娜速记组
+编辑：Mttfly
 
-诉讼中写道，林德尔先生提起这一诉讼，是寻求宣告性和禁令性救济，以若干理由使传票无效并禁止其执行。林德尔辩称，该传票侵犯了他的第一修正案和第四修正案的权利。诉讼还声称，根据美国众议院的规则，特别委员会的个别成员“无权行事，因为他们没有有效地组织成一个众议院委员会”。林德尔说，“即使特别委员会可以发出传票，传票也超出了特别委员会的权限，因为它要求出示的记录远远超出了特别委员会的调查范围”。
+**2022年1月5日文贵大直播**
 
-作为前总统川普的支持者，林德尔在社交媒体上对选举结果提出质疑。2021年2月，推特因林德尔违反其“政策”而永久封了他的号。去年年初，这位MyPillow公司的首席执行官被拍到离开椭圆形办公室时手里拿着神秘的纸条，成为头条新闻。林德尔称这些似乎提到“戒严令”的纸条不是官方的，是律师给川普的建议，林德尔只是帮一位律师送而已。
+共产党就让你永远活在一个噩梦中，永远不说你会醒来，你就一直做下去，直到你做恶梦，死在噩梦里为止。就像今天，你看到了西安人笑嘻嘻地被（关）集中营一样，就像那个猪、鸭子被赶上架一模一样。但是你要看到台湾人不信邪，台湾人认为骚扰我做噩梦是吧？我知道你这玩意是假的，有风水都迷信。香港人不信邪啊，新疆人现在也反抗，西藏人反抗了，还有世界上很多人反抗，我们新中国联邦就是告诉所有的人真相的地方。
 
-调查1月6日冲击国会大厦事件起因的九人两党委员会已经传唤了一些人作为调查的一部分，包括川普的前国家安全顾问迈克·弗林、他的前顾问斯蒂芬·班农和他的前白宫幕僚长马克·梅多斯。
+我们要做美丽的梦、春梦、有水的梦，不要做噩梦，而且我们知道梦醒来就是更好的人生。还有一个更重要的事情，我们不是迷信，我们相信有风水。风就是阳，水就是阴，这是为什么奥林匹克村出来了水龙，盘古的阳龙，他为什么把龙头变成了包头？如果他也不信，他就不这么干了，就像把佛手要拿走一样，在冬奥会以前，现在是发生了什么？
 
-林德尔说两党委员会是“垃圾”，这是一个很大的骗局，他不会在任何垃圾上浪费时间，并说这是一张非法的、腐败的传票，想获取他的电话记录。他没有什么可隐瞒的，但不会交出记录。林德尔还说是中共国攻击了美国，这是有史以来最大的犯罪。
+大家记住，在全人类都没有的情况下，现在发生了一个你们刚才看到一开始的盖特。黄皮肤人，中国人从来没有在宇宙中占过今天的位置，全宇宙当中从来没有发生过。咱们这些人不流血，能让全世界开始消灭邪恶的力量，就是阳光。太阳将出来，黑暗将消去，那就是我们更重要的事情。只有我们没打疫苗，你没想过这个问题有多大了吗？现在所有的人都在问一个问题，为什么我打2针、3针疫苗，从来没出去过我却染上病了？疫苗就是病毒，mRNA就是病毒。你不用被传染，你就是病毒。就在刚才我直播的时候，欧洲的某个领导人说他老婆染上了。他说：“Miles我打了三针，我太太从没出去过却染上了。”我说我告诉你，mRNA就是你身体的毒，它只是什么时候发作而已。
 
-**新闻来源**：[MyPillow CEO Mike Lindell Sues Jan. 6 House Select Committee Over Subpoenaed Cellphone Records](https://www.zerohedge.com/political/mypillow-ceo-mike-lindell-sues-jan-6-house-select-committee-over-subpoenaed-cellphone)
+你们没被打疫苗是多伟大！为什么七哥在2017年就说精子卵子值钱，现在涨了几万倍是吧？还想想你们还有这币那币、还有现在、还有盖特，毫不夸张的说，（这是）人类的奇迹！风水都在我们这一方啊！就像后面蝴蝶般的玫瑰花、七哥的领带、七哥站在这给你们直播几个小时（这件事），这都不是常人所能解释的。我们的生命无限精彩，**一定要记住，爱、诚实和灭共是我们在一起的根本基础，只有这三样东西会让我们走的更远，否则一切都会失去啊！**
+
+*发布：Mttfly*
+
+**
+****更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
