--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,44 +1,19 @@
 ---
-title: 郭文贵直播摘要和音频 2022.01.07
+title: “以共灭共” 中共开年打两虎
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1836329/)
+`德国纽伦堡正义农场` [轉載自GNews](https://gnews.org/zh-hans/1836369/)
 
-摘要撰稿人：文俊
+作者：德国纽伦堡正义农场-儒为
+![](https://assets.gnews.org/wp-content/uploads/2022/01/打虎.jpeg)封面来源：网络图片
+2022年1月8日，中共中央纪委国家监委网站发布2名中管干部接受审查调查信息，“**西藏自治区政府副主席张永泽接受中央纪委国家监委审查调查**”，“**中国人寿保险（集团）公司党委书记、董事长王滨接受中央纪委国家监委审查调查**”，再次释放了全面从严治党永远在路上，把严的主基调长期坚持下去，党风廉政建设和反腐败斗争一刻不停的强烈信号。
 
-音频提供者：左媛
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-501.png)
-### 视频链接：
+2022年1月6日，七哥盖特：乖乖哟… …梦游开始！【20大 习太阳 国家主席，胡春华总理，陈敏尔 第一副总理，陈全国 纪委书记，李晞 政协主席，丁薛祥 人大委员长… …】。七哥每次梦游都能让中共内部颤三颤，每次都能“梦成真”，七哥也说自己从来不分析，全是靠情报。让我们再次感谢默默无闻，甚至流血牺牲，为华人争取未来和希望的战友们。
 
-[https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
+“以共灭共”进行时，中共开年打两虎，在中共国春节之前，在中共北京冬奥会之前，在中共二十大之前，让中共党内乌云盖顶，杀气腾腾。陈全国，中共刽子手，不降反升，释放信号非常明显，即藐视美国之前对陈全国的制裁，又对党内释放出“大清洗”信号，江、曾、王、孟等党内各山头都将被清洗。政治斗争的结果虽然是残酷的，老白姓也将是被裹挟的，但是对消灭中共体制是利好的。
 
-### 音频链接：
+新闻来源：🔗[开年打两虎：保持对腐败的压倒性力量常在](http://www.news.cn/legal/2022-01/08/c_1128244552.htm)
 
-### 摘要：
-
-- 木兰身心健康
-- OMCON 对 COVID 病毒有一点缺点，OMICON 是假的
-- 疫苗mRNA（刺突蛋白）就是病毒
-- 拜登可能导致很大的必然会被否决
-- 中国消费金融危机流氓全球名人
-- 中共灭亡制造的金融危机，美国的资产可能会缩水50%-70%
-- 中共灭亡行动的全球经济危机，喜联储币重新书写了数字货币的游戏规则
-- 国内买钱的战友，一定要先KYC，不要因为买喜币影响安全，要买喜，大家可以帮忙，因为有战友在银行付款被警察威胁
-- 喜币如果没有锁币，目前的价格会统计币3块钱。战友们晃晃的“加锁”5块钱，伟大的太棒了
-- 共产党越打压新中国联邦护照，新中国护照越升值
-- 新中国联邦，爆料革命，郭文贵成为共产党绝对不能谈的词
-- 胡海峰是胡锦涛和习近平交易的结果，未来的接班人
-- 20大常委会：习太阳国家主席、胡春华总理、陈敏尔第一副总理、陈全国纪委书记、李晞政协主席、丁雪祥人大委员长
-- 二十个大常会公布内斗，没有江家人，贾庆林，栗战书会善罢甘休吗？
-- 北朝鲜参加奥会，金正恩对共产党冬大开放，100亿美元现金，进入，都无法完成中共的使命。而且很怕死（怕斩首）
-- “中美是否一战？我觉得火战热战应该是在冬奥会之后，可能会因为台湾问题
-- 病毒后新加波不会有李家
-
-
-
-
-
-
-编辑发布：闪电训练
+*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
 
  
 
