--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,36 +1,33 @@
 ---
-title: 01/08每日播报&#124;播客巨星乔·罗根加入盖特后引起注册浪潮
+title: 杨贝贝的歹毒用心堪比希特勒时代的戈培尔
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836215/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836360/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
+撰稿：纽约香草山信息部 – 6zero4
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
+2021年1月5日文贵大直播中，郭先生称，中共花一年时间通过世界级媒体HBO VICE以及记者杨贝贝，处心积虑利用假视频抹黑爆料革命，将全球华人定义为西方民主最大的敌人，将给海外华人带来“印尼排华”惨案般种族歧视、种族屠杀等灾难。杨贝贝事件是中共为华人乃至黄皮肤亚裔，精心罗织的极其阴险歹毒的天罗地网加强版。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-503.png)
+1月4日，被她蓄意恶剪的视频所陷害的战友跟律师们进行了沟通，新中国联邦人优秀的英文、清晰的思路与准确的表达让律师们感到惊讶。
 
-**2022-01-0**8
+最后律师们对杨贝贝事件达成3点共识：一，确认2020年1月6日国会山动乱现场并没有新中国联邦国旗，这是极其危险的栽赃；二，把华人定义为西方民主的威胁，完全是希特勒当年戈培尔式宣传口径，这绝对适用RICO法案；三，这个毫无法律依据的视频，推出的时机和内容，说明杨贝贝不仅在挑战新中国联邦，也在挑战美国。美国两党很多议员看了视频后都认为她绝对跟中共有关系。
 
-据《华盛顿邮报》1月7日报道，在播客巨星乔·罗根(Joe Rogan)加入后的几天内，盖特已经有超过 100 万新用户注册。
+对于杨贝贝是中共最重要的大外宣，是对华人最危险的人，新中国联邦人和所有华人都有权力起诉HBO VICE和Isobel Yeung。
 
-报道称，盖特是一个吸引保守社交媒体用户的社交平台。罗根周日在该网站上发表了第一篇帖子的5天后，该平台的新用户已经达到了 100 万大关，。盖特发言人埃博尼·鲍登 (Ebony Bowden) 称，这使盖特网站的用户总数已经超过 了400 万。
+新闻连接：[2022年1月5日 文贵大直播](https://gtv.org/video/id=61d59a1931a71619b57520a4)
 
-虽然罗根先生目前仍然拥有一个推特帐户，但是在乔治亚州众议员玛乔丽·泰勒-格林（Marjorie Taylor-Greene）的账号在周日被推特封号后，他考虑到了推特的审查制度，于是他加入了盖特。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
 
-罗根先生在他的第一个盖特帖子中写道：“为了防止推特上的东西变得更蠢，我现在也在这里。欢呼吧！”
+总编/编辑：童谣
 
-据报道，在罗根先生加入盖特的第二天，也就是 1 月 3 日，盖特到注册人数就达到了 343,000，这是该网站自 7 月推出以来的最大单日注册量。 鲍登还补充说，盖特并没有支付罗根加入该网站的费用。
+校正/发稿：浪迹天涯
 
-对于保守派来说，盖特网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。
-
-同时盖特是一个国际平台。截至周五，盖特表示其在美国有220万用户，其次是巴西的50万用户，以及英国、德国和法国的大量用户。
-
-盖特的CEO杰森·米勒(Jason Miller)先生对《邮报》说：“这些数字证明，社交媒体用户开始意识到硅谷高管日益严厉的审查制度，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。”
-
-（秘翻新闻主编Grace编译报道）
-
-发布:星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
