--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,35 +1,25 @@
 ---
-title: 中国科学家因窃取孟山都公司的机密而认罪
+title: “枕头哥”林德尔就被传唤的手机记录起诉美众议院特别委员会
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836157/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1836338/)
 
-**编译：美哥**
-**编辑:   MSGZ  **
+**编译：花岗岩**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-08-193743.jpg)
+据零对冲1月7日报道，MyPillow首席执行官迈克·林德尔（Mike Lindell）起诉了调查1月6日国会大厦被入侵事件起源的美国众议院特别委员会，试图阻止电信公司威讯（Verizon）与该小组分享他的信息。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/树叶.png)图片来源  theguardian.com
+该诉讼于5日（周三）在美国明尼苏达州地方法院提起，并将威讯公司、美众议院议长南希·佩洛西和该小组的其他成员列入其中。
 
-前孟山都雇员向海涛，在美期间被指控窃取了美国农业技术，目的是让中共政府受益。
+林德尔是在众议院专门委员会向威讯发出传票后提起诉讼的，该传票要求威讯提供2020年11月1日至2021年1月31日期间林德尔经常使用的一部手机的所有通信记录。该手机号码是由威讯的用户My Pillow Inc.分配给林德尔先生使用的。
 
-周四，美国司法部门的起诉书里写道了44岁的向海涛密谋为中华人民共和国窃取商业机密。目前他已承认了罪行。
+诉讼中写道，林德尔先生提起这一诉讼，是寻求宣告性和禁令性救济，以若干理由使传票无效并禁止其执行。林德尔辩称，该传票侵犯了他的第一修正案和第四修正案的权利。诉讼还声称，根据美国众议院的规则，特别委员会的个别成员“无权行事，因为他们没有有效地组织成一个众议院委员会”。林德尔说，“即使特别委员会可以发出传票，传票也超出了特别委员会的权限，因为它要求出示的记录远远超出了特别委员会的调查范围”。
 
-向海涛在密苏里州的孟山都总部曾以科学家的身份工作过，在他离开后，就买了一张飞回北京的单程票，而执法人员在他的电子设备里发现一份“营养素优化”算法的系统副本，而该演算法属于孟山都的机密。本案将于4月7号宣判，如果指控全部成立，其将面临15年有期徒刑和500万的罚金处罚。
+作为前总统川普的支持者，林德尔在社交媒体上对选举结果提出质疑。2021年2月，推特因林德尔违反其“政策”而永久封了他的号。去年年初，这位MyPillow公司的首席执行官被拍到离开椭圆形办公室时手里拿着神秘的纸条，成为头条新闻。林德尔称这些似乎提到“戒严令”的纸条不是官方的，是律师给川普的建议，林德尔只是帮一位律师送而已。
 
-美国密苏里州东区的检察官弗莱明 (Sayler Fleming) 表示：“我们不能允许美国公民或者外国人，将敏感商业信息交给别国的竞争对手，这些罪行对美国经济和国家安全十分危险。”
+调查1月6日冲击国会大厦事件起因的九人两党委员会已经传唤了一些人作为调查的一部分，包括川普的前国家安全顾问迈克·弗林、他的前顾问斯蒂芬·班农和他的前白宫幕僚长马克·梅多斯。
 
-美国联邦调查局反间谍助理小艾伦.科勒也称：“当像中国这样的政府盗取我们的技术来实现经济发展的同时，美国人成为了最大受害者。美国不仅仅是机密实验室里的军事技术，提高棉花产量的农业技术也同样会被对手觊觎。”
+林德尔说两党委员会是“垃圾”，这是一个很大的骗局，他不会在任何垃圾上浪费时间，并说这是一张非法的、腐败的传票，想获取他的电话记录。他没有什么可隐瞒的，但不会交出记录。林德尔还说是中共国攻击了美国，这是有史以来最大的犯罪。
 
-向海涛的认罪是美国司法界对反对中国干涉的又一次新胜利。上个月，前哈佛大学的化学部门负责人，因为非法参武汉工程大学的项目而认罪。
-
-原文链接：[https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/](https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/)
-
-*发布：盘古相聚*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**新闻来源**：[MyPillow CEO Mike Lindell Sues Jan. 6 House Select Committee Over Subpoenaed Cellphone Records](https://www.zerohedge.com/political/mypillow-ceo-mike-lindell-sues-jan-6-house-select-committee-over-subpoenaed-cellphone)
 
  
 
