--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,22 +1,50 @@
 ---
-title: 杭州机场一俄货机起飞时失火
+title: 澳23岁双重接种的举重冠军死于COVID-19
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836059/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836117/)
 
-撰稿：追着曙光跑
+翻译： Jenny Ball
 
-据中共国新华社杭州1月8日电，8日早晨4点左右，由杭州飞往俄罗斯新西伯利亚马切沃机场的俄罗斯航星航空4B6534货机，在准备起飞前退出机位时突发舱内明火情况。经紧急处置，机上8名机组人员全部被救出后转移。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-08-at-20.07.23.jpeg)图片来源：网易视频截频
-起火飞机型号为图波列夫TU-204，为俄罗斯自产飞机，全球数量极少。起火后，飞机已断成两截。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-494.png)图片来源 :thegatewaypundit.com
 
-据舱单信息，该货机装载有普通货物约20吨，配载航油约26吨。目前，相关险情已成功排除，起火具体原因相关部门正在进一步调查中。
+根据一份报告，一名 23 岁的科学家、举重冠军和健康运动员在检测出 Covid-19 呈阳性后，在悉尼一家医院死亡。
 
-新闻来源：[杭州机场一俄货机起飞时失火断成两截，型号全球数量极少](https://www.163.com/dy/article/GT6P0MB6053469LG.html)
-[杭州机场快速处置一起外航货机起火事件](http://www.news.cn/local/2022-01/08/c_1128244742.htm)
-[关于杭州机场一起不安全事件的情况通报](http://hd.caac.gov.cn/HD_DQYW/202201/t20220108_210816.html)
+詹姆斯·康迪利奥斯（James Kondilios）是堪培拉的居民，在因病毒并发症于 1 月 4 日在圣文森特医院去世之前，已知他没有任何潜在的健康问题。
 
+在新南威尔士州卫生当局透露他的身份后，他的家人和朋友都在哀悼并表示敬意。
 
+他的一位朋友在 Facebook 上发布了一条情感信息作为致敬：
 
+（更新 – 致敬后来被删除）
+
+“非死不可”说发文已不可访问
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-496.png)图片来源 :thegatewaypundit.com
+
+他最近的死亡提出了一个问题，如果他因为接种了双重疫苗，并且没有潜在的健康状况，但受到保护免受 COVID-19 病毒的疫苗的侵害，那么会发生什么？这打破了疫苗将保护您免受病毒侵害的整个说法。
+
+福奇博士、药企，企业媒体和公共卫生机构，从一开始就一直在对 Covid 撒谎。
+
+**他们说疫苗会阻止病毒传播**。
+
+**他们说接种疫苗的人可以不戴口罩。**
+
+**他们说接种疫苗的人不会重病。**
+
+**他们说接种疫苗的人不会死亡。**
+
+任何还在信任专家的人都应该得到他们的帮助。我们从一开始就试图用理智、逻辑，和实际统计数据，与他们进行这场对话，**我们应该为我们失去的自由、时间和财富而得到补偿。**
+
+医疗行业、公共卫生行业、学术界和政府的合法性已被 Covid 抹去。在“卡内科亚大帝” (KanekoaTheGreat)的这段视频汇编中观看他们的谎言。
+
+新闻来源 :[thegatewaypundit.com] [Double Vaccinated 23-Year-Old Powerlifter Champion with No Underlying Health Condition Dies from COVID-19 in Australia](https://www.thegatewaypundit.com/2022/01/double-vaccinated-23-year-old-powerlifter-champion-no-underlying-health-condition-dies-covid-19-australia/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
