--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,51 +1,21 @@
 ---
-title: 风水是德行的标准是人在社会上和大自然相处的一个地位
+title: 南极疫情是外来输入，还是疫苗引发？
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1836022/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836115/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d95648dffab035958c2e62](https://gtv.org/video/id=61d95648dffab035958c2e62)
+撰稿—祥瑞舟
+校对/上传—无明逆流
 
-**郭文贵先生：**人的命不是天注定，人的命是一定记住自己来决定的。我举个最简单的例子，说这个人运特别好，他生下来就是当官的命，你把他送到监狱去，你看看他还能当官吗？不可能的。分分钟就可以改变，人的命是就在你手里边，环境改变。如果他说他我就是当官命，送到阿富汗去，他不想当官他想吃粮食。大环境决定了一个你个体在环、大环境面前什么都不是，地球都没了，没有人命运的好，没有什么官运、财运、境运。
+据外媒报道，来自南极的一个偏远科考站近日传来了坏消息，半个月以来科考站超过一半的工作人员感染了新冠病毒。报道中指出，该南极科考站为“比利时南极伊丽莎白公主站”，在12月14日发现了第一例感染新冠病毒的工作人员。此后，又有多人病毒检测呈阳性。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/121374_1.jpg)
+该报道指出，所有工作人员在来到该科考站之前，都已经完成了新冠疫苗的接种，并且病毒检测也都呈阴性，目前尚不清楚是如何感染新冠病毒的。
+考虑到在病毒和疫苗真相面前所谓世界主流媒体已经被利益群体收买，从该篇报道中我们无法找寻更多的真相。然而实际上看过这篇报道的读者都会问同样的问题，他们是怎么感染病毒的？
 
-我告诉你一定要记住，人的选择是第一的，就你做每件事情都是你的选择，而且你选择里边就是你的风水带来的，所有的风水就是你的德行，就你人的本性。绝不可能有任何德性不好的人，说我现在我命特别好，我告诉你命好，不是你想当上官、发了财就好。
+尽管还缺乏足够多的证据，可常识是任何人都无法忽略的：在基本与世隔绝的南极，是不可能有外来输入传染源的。如果说有，那唯一的传染源很有可能是疫苗接种者自身疫苗副作用爆发所导致，这和西安情况有些相似。正如七哥最近爆料中提到过的那样，西安疫情是接种疫苗副作用导致的后果。
 
-有人是老天就用钱，像马云，就虐待他，儿子脑开瓢，老婆几次癌症，他现在失去了全家的自由。马云你看，他能有长岛哥幸福吗？他没有的。有的人要当官，张高丽当这么都成了副国级了，现在“宇宙无限大，地球一粒沙”，生不如死，权力、金钱可能也是惩罚你的方式。
+除了爆料革命和部分西方正义人士一直在揭示病毒与疫苗真相，世界各国政府目前还都没有对病毒真相进行联合调查问责，疫苗接种也还没有被各国政府按下停止键，还需要更多时间去传播疫苗真相。
 
-你先说你的风水，你的成功就刚才你讲这些事情，这在生命中根本不算什么事是吧？你缺的就是一件事情，你先把你自己的德性和你对人生的看法的高度，和你认为确定你喜欢和成功的标准定下来，你就对风水这个事重新定义。
-
-风水就是一个人的德行的标准，就是一个人在社会上和大自然相处的一个地位，绝不是金钱，也不是拥有多少女人、多少来名利来控制的，但你看明白之后，你会把你所有你刚才谈的什么，都是小事，什么坟地……
-
-我告诉你，坟地你理解以后，你会知道坟地是干啥的。坟地是有灵（魂），有一些没升到天的灵魂和没有投胎的灵魂凝聚之地，是很腌臜的地方，但是腌臜里面一定它也有不同的层次。你看到这些都是小儿科，这都是太小的了，我可以给你搞好多好多实验，会让你彻底改变。
-
-就是说明你对社会和人性和地球的认知还不能解释你现在所有人生面对的十之八九不如意。还有一些你根本对世界的认知，你真的是宇宙那么大和地球一粒沙那么个差距，你认知太少了，你认知多少这都不算。提高你的知识，提高你的德行，提高你的标准，这些都是小事，这就是答案，风水即知识。
-
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
-
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+当疫苗灾难频发、出现大量死亡和伤残案例，整个世界秩序陷入停摆与混乱的时候，人类当下面临的这场生化危机真正的拐点才会到来。停止接种疫苗、病毒追责以及疫苗追责将接踵而至，所有真相终将水落石出，正义终将战胜邪恶！
 
  
 
