--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,28 +1,18 @@
 ---
-title: 在华日本公司频频受罚 对抗中共，日本需坚定立场
+title: 科兴靠疫苗灾难继续赚黑心钱
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836409/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/1836469/)
 
-撰稿：东京樱花团/麗子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-27.jpg)
-中共当局已经开始了一系列针对在华日本公司的案例。7日，便利店巨头7-Eleven的中国子公司已被罚款15万元人民币。理由是该公司在中共国的官方网站上发布了一张将台湾视为 “独立国家 “的地图。
+科兴凭借疫苗业务，其最新的业务报表十分亮丽。半年净利率高达78.24%， “实力”秒杀茅台。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/下载-4-1.jpg)
+科兴背后的控股股东都是谁？！鼎辉乌托邦有限公司、黑石和先锋等。真正的控制人是谁？中南坑新老常委和西方黑暗沼泽地的大佬们。制造疫苗的各大医药公司和政府都是在一个利益圈里的！
 
-根据北京市政府的文件，该处罚的日期是去年12月21日。此外，中共当局还指出，地图中未标明钓鱼岛，并且对西藏自治区边界线和中国南海的标记也有问题，故根据《地图管理条例》，该公司被判定触犯法律。
+科兴配合政府放出了疫情加重的信号，表示为了对抗新病毒，需要科兴和辉瑞疫苗混打，才能防御重症。实际效果如何？完成疫苗注射的比例越来越高，而感染人数也逐日幂级增长。疫苗没有在救人，而是在要纳税人的钱，还要命！
 
-无印良品也曾在2018年1月被勒令处理相关商品，因为样品地图上没有包括钓鱼岛及中国南海的岛屿。集团公司也因在衣架商标印刷 “原产国 台湾”而被罚款。
+科兴的同行，辉瑞制药目前还在积极收购研究心脑血管疾病的公司，疫苗已经导致这方面疾病，科兴、煇瑞还继续在疫苗灾难中寻找商机赚钱，完美地把资本主义贪婪吸血的一面和共产主义血腥集权的一面结合在一起。
 
-去年，索尼的中国子公司也被罚款100万元人民币，只因广告将在7月7日推出一款新产品，而这一天恰好是中日战争导火索—卢沟桥事件纪念日。
-
-时事评论员表示，由于中共房地产市场的恶化，中央和地方政府陷入严重财政困难，中共目的是通过对国内外公司的罚款来增加收入。对中共而言，日本公司比美国公司拥有更多的指控借口，而且日本政府频频示弱，中共屡屡得逞。所以日本政府有责任保护其公司，关键问题应该坚定立场。
-
-信息源:
-
-[「台湾」「尖閣」表記で現地のセブンイレブンに罰金　中国当局が日本企業に“言いがかり”　無印、ソニーに続き](https://news.yahoo.co.jp/articles/23798ea24c892ea01455111d452d83a3bcd72480)
-
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
+文案：wuxin
+校对：雪菜、文峰
 
  
 
