--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,34 +1,21 @@
 ---
-title: 快手就算大规模裁员最终也得跟着CCP一起破产
+title: 哈萨克斯坦总统：我下令可以无预警开枪
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1835945/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836004/)
 
-撰稿：永遠の小学生文筝
-![](https://assets.gnews.org/wp-content/uploads/2022/01/802.jpg)图片来自网络
-**快手自去年底开始了大规模裁员**
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/7-8.jpg)（图片来源于本文链接）
+鉴于抗议浪延续多日，哈萨克斯坦总统托卡耶夫明确表示，授权安全部队可以在无事先警告的情况下开枪。当局称，迄今有40多人丧生。在国内爆发严重骚乱后，哈萨克斯坦总统托卡耶夫（Kassym-Jomart Tokajew）下令向武装示威者开枪。在一次全国电视讲话中，他说：“我已命令警察和军队在无预警的情况下开火。”
 
-根据澎湃新闻的报导，短视频APP公司快手科技的员工向其透露，快手始于去年年末的仍在继续，有的部门裁员比例多达30%。2021年9月28日发布的快手内部邮件显示，快手有国际化、商业化、电商、游戏四大部门，据说这波裁员中都有一定比例的员工被裁。虽然是想通过裁员减少支出，但最终仍旧会被中共搞死。
+他称，在最近几天局势尤为严重的阿拉木图，2万示威者从事了攻击行为。他将示威者称为“恐怖分子”，受境外势力操控。数天来，哈萨克斯坦国内示威者同安全部队之间爆发冲突，其激烈程度前所未见。抗议活动最初针对不断上涨的天然气价格，很快扩展为反政府浪潮，并蔓延全国。周五早晨，该国电视台报称，迄今，有26名示威者被击毙，另有3000多人被捕。人们担心，平民死亡人数可能更高。官方称，至少有18名安全人员殉职。此前，托卡耶夫已宣布全国进入紧急状态，并吁请俄罗斯领导的军事联盟——集约组织（CSTO）派遣维和部队，提供帮助。这一维和部队首批官兵已于周四飞抵哈萨克斯坦。在电视讲话中，托卡耶夫对此致谢。他称：“我特别感谢俄罗斯总统普京。他对我的呼请做出了非常迅速、友好的回应。”
 
-**快手缩减成本的各种动作**
+信息来源：
 
-为了缩减成本快手进行了各种不得人心的政策，调整租房补贴范围，取消了免费的三餐以及下午茶。此前还被曝出上海、广州、深圳、北京的商业化团队部分业务条线要被取消，其余的要在12月底前搬到杭州，并要求一部分员工在搬家和离职之间选择。
+[哈萨克斯坦总统：我下令可以无预警开枪](https://www.dw.com/zh/%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E6%80%BB%E7%BB%9F%E6%88%91%E4%B8%8B%E4%BB%A4%E5%8F%AF%E4%BB%A5%E6%97%A0%E9%A2%84%E8%AD%A6%E5%BC%80%E6%9E%AA/a-60358301)
 
-**快手股票的走势说明是个垃圾股**
-
-从快手上市以来的走势就可以看出这不是家有优质产品的公司，只是作为互联网中常见的被资本包装后用来套钱的概念公司而已。对于跟风进入的散户而言，最终只是替别人接盘而已。当资金背后的中共利益集团套现之后，快手只会成为持续下跌的垃圾股。
-
-**快手与其他互联网公司最终会被中共收走**
-
-去年多家互联网企业都经历了大规模裁员，跟习近平要将国家带向北朝鲜模式分不开。习近平希望的是影视、音乐、艺人等都为共产党服务，创造歌颂党的作品。像游戏这种跟党抢人脑地盘的行业，自然是无法允许其存在的，党需要的是党文化控制下的人民，也就是听话的奴隶，对游戏上瘾的人可不会任劳任怨。
-
-参考消息：
-
-[中國短影音巨頭再傳裁員30% 規模擴及4大事業部門](https://udn.com/news/story/7333/6011532?from=udn-catebreaknews_ch2)
-
-[快手再曝裁员：覆盖四大事业部，个别团队裁员比例30%](https://www.thepaper.cn/newsDetail_forward_16137691)
-
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
