--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,19 +1,17 @@
 ---
-title: 【中日财经爆】日本一定会成为第二大数字货币市场
+title: 为何有脱北者选择回朝鲜？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835905/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836003/)
 
-撰稿：东京樱花团/ 盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-85.png)图片来源于本文链接
-我一再说到日本的HPAY市场，还有日本的未来的数字货币整个的未来，还有在日本的整个的喜币和喜美元的流行，还有未来整个的实施。可以说它是战略性的，应该说是排第二位，除了美国之外它是最重要的。
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/3-11.jpg)（图片来源于本文链接）
+在刚刚过去的元旦，一名2020年11月穿越非军事区进入韩国的脱北者循相同路线重回朝。此事引起韩国社会的广泛讨论。此事件被韩媒称为“回力镖叛逃”。韩国媒体批评军方守卫松散，玩忽职守. 一般而言，通过非军事区（DMZ）叛逃的情况极为罕见。在这个长达248公里，宽约4公里的边境地带，除了设有铁丝网外，两侧都有重兵把守，更设置了地雷和坦克陷阱。每当有人设法穿越非军事区而且未被察觉，韩国军方便会受到公众的强烈质疑与批评。韩国军方为此事道歉，韩国联合参谋本部议长元仁哲表示：“我对于这起事件感到非常抱歉。我承诺尽一切努力确保类似事件不再发生。”韩总统文在寅已下令对军队的整体安全布局进行特别检查。
 
-而且日本这个国家，一定会在数字货币市场上这次会抓住这个机会，它不会再输掉了。过去的日本二战之后，在金融市场市场上，简直这个日本这个国家，把所有的国家的财富全输光了。日本的金融烂到什么程度，共产党的科技发明有多烂，日本的金融就有多烂，就这么简单。
+韩民众疑惑为何脱北者会选择回到一个生活极为艰难的国度，至少在外人的眼里是如此。据报道，该名返朝的脱北者只能做“门卫”，为了生计而挣扎。负责协助脱北者适应韩国社会的统一部则强调，除了金钱补助外，该名男子在寻找住宿和求职时都获得帮助，而享有医疗福利。尽管如此，在迄今逃往韩国的3万多名脱北者中，至少30人在过去10年间选择重返朝鲜。每个人回朝鲜的理由都不同。“有人觉得在这里保住工作很难；有人因为思念当地的亲人；还有人无法适应文化差异、难以适应韩国生活；有人不能通过文凭考试，迫不得已只能在餐厅打工；或是觉得受到歧视。”
 
-所以说日本的整个的交易一定会有，不管中间有多大的曲折，日本最后一定会成为喜币流行的重要市场。不管有多少挫折，然后在日本这个喜支付是绝对的重要，千万不要错过了时机。
+信息来源：
 
-日本的这几个农场，因为今天没有说太（细），如果你们错过这个机会，那草根小哥明年这个，再在大直播，你绝对看不到草根小哥了，你不会再看到Cosmos，你不会再看到马拉多纳，你不会再看到勇气、魔女，不会看到的。温暖姐姐，你别在那儿很自信，你别老是今天你和文嘉你俩一唱一和地，我们有蓄积的力量，明年如果在这个事上没搞明白，明年你就成个笑话了。你自己都不好意思看电视了。所以说抓住这机会，一定会是最重要的。对喜币发展的市场就是第二市场。
-
-[消息来源](https://gettr.com/post/ple42ae1c8)
+[为何有脱北者选择回朝鲜？](https://www.dw.com/zh/%E4%B8%BA%E4%BD%95%E6%9C%89%E8%84%B1%E5%8C%97%E8%80%85%E9%80%89%E6%8B%A9%E5%9B%9E%E6%9C%9D%E9%B2%9C/a-60359568)
 
 *校对：东京樱花团/知了知了
 发布：东京樱花团/tdownc2p*
