--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,24 +1,36 @@
 ---
-title: 莫德纳首席执行官：未来需要接种更多中共病毒疫苗加强针
+title: 朝鲜致函称因疫情无法参加北京冬奥会
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1835785/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835807/)
 
-#### 撰稿：彩虹
+作者：纽约香草山文艺部 – 宁文静
+![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
+当地时间1月7日，朝鲜奥委会致函中共国奥委会及冬奥组委会，称朝鲜将不参加北京冬奥会。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-7.jpg)图片来源：路透社
-1月7日，《新闻极限》报道，周四，莫德纳（Moderna）公司的首席执行官（CEO）斯特凡·班塞尔（Stephane Bancel）在高盛集团公司（Goldman Sachs）组织的医疗会议上说，未来几个月，针对中共病毒（COVID-19）的疫苗加强针的功效可能会下降，人们需要在2022年秋季再打一次加强针。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/8-5.jpg)
 
-班塞尔说，该公司正在研究一种针对中共病毒变体奥米炕（Omicron）的候选疫苗，但不太可能在未来两个月内上市。
+朝鲜在信函中，一方面指责了美国及其盟国，试图阻碍冬奥会顺利举办。另一方面却借全球新一轮疫情非常严重为由，同样拒绝参加本届冬奥会。
 
-他认为：“我仍然相信我们将在2022年秋季和未来需要（更多中共病毒）疫苗加强针”。
+时评人士指出，早在2021年9月初，国际奥委会IOC就因为朝鲜拒绝参加东京夏季奥运会，而决定暂停朝鲜奥委会的成员资格至2022年底，使朝鲜无法以国家队选手的资格参加北京冬奥会，但IOC并未否决朝鲜选手以个人身份参加北京冬奥会的可能性。此时这封信函不仅显得多余，更有“伤口上撒盐”之嫌。
 
-文章指出，通过重复接种中共病毒疫苗而获益的莫德纳公司，其第三季度财报显示，2022年美国销售中共病毒疫苗加强针的市场销售额（预计）可能会达到20亿美元。
+参考链接：
 
-**新闻来源**
+- [朝鲜：因全球疫情等原因无法参加北京冬奥会，但将全方位支持和声援中国](https://m.sohu.com/a/514860835_313745?scm=1104.0.0.0&amp;spm=smwp.home.fd-important.9.1641512406698kIPHEre)
 
-[Moderna CEO Bancel Says People May Need Another Booster in Fall of 2022](https://www.newsmax.com/newsfront/moderna-vaccine-covid/2022/01/07/id/1051419/)
 
+![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
+
+总编：文特
+编辑：Kathy文艺
+校正/发稿：海阔天空1
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
