--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,37 +1,29 @@
 ---
-title: 盖特改变了社交媒体的游戏规则
+title: 在华日本公司频频受罚 对抗中共，日本需坚定立场
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836365/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836409/)
 
-撰稿：银河勇气星—骄子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
-郭文贵先生在1月5日的直播中与战友分享了盖特的巨大价值。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-504.png)
-郭先生表示，世界当下的社交媒体平台如推特、脸书、抖音等，都是以大科技公司或大集体来垄断个人用户，群体控制并奴役个体。与之相对的，盖特开创了以个人用户为主、个体之间可以自由沟通真实讯息且不被平台垄断的区块链式人类互动新型模式。其中，盖特平台最出众的一点在于，金融与人的行为直接挂钩——这一模式打破了世界各国的法币对人们的严格管控与限制，真正做到货币、自由、人权、信息的解放。
+撰稿：东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-27.jpg)
+中共当局已经开始了一系列针对在华日本公司的案例。7日，便利店巨头7-Eleven的中国子公司已被罚款15万元人民币。理由是该公司在中共国的官方网站上发布了一张将台湾视为 “独立国家 “的地图。
 
-郭先生也提到，在人类应对中共病毒及其疫苗的这场大灾难中，旧的社交媒体平台都有原罪，而罪恶是需要付出代价的，比如死亡。但是，盖特是一个没有原罪，并且给人类带来新的生命和信仰的平台。
+根据北京市政府的文件，该处罚的日期是去年12月21日。此外，中共当局还指出，地图中未标明钓鱼岛，并且对西藏自治区边界线和中国南海的标记也有问题，故根据《地图管理条例》，该公司被判定触犯法律。
 
-郭先生补充道，盖特完全改变了旧社交媒体公司的游戏规则，其主导的以个体为主的时代已经到来。同时，到目前为止，盖特的数据还在不断攀升中。
+无印良品也曾在2018年1月被勒令处理相关商品，因为样品地图上没有包括钓鱼岛及中国南海的岛屿。集团公司也因在衣架商标印刷 “原产国 台湾”而被罚款。
+
+去年，索尼的中国子公司也被罚款100万元人民币，只因广告将在7月7日推出一款新产品，而这一天恰好是中日战争导火索—卢沟桥事件纪念日。
+
+时事评论员表示，由于中共房地产市场的恶化，中央和地方政府陷入严重财政困难，中共目的是通过对国内外公司的罚款来增加收入。对中共而言，日本公司比美国公司拥有更多的指控借口，而且日本政府频频示弱，中共屡屡得逞。所以日本政府有责任保护其公司，关键问题应该坚定立场。
+
+信息源:
+
+[「台湾」「尖閣」表記で現地のセブンイレブンに罰金　中国当局が日本企業に“言いがかり”　無印、ソニーに続き](https://news.yahoo.co.jp/articles/23798ea24c892ea01455111d452d83a3bcd72480)
+
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
 
-
-新闻来源：[1/05/2022 文贵直播](https://gettr.com/post/pmli8c3d40)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
-
-总编：文特
-
-编辑：Irene木木
-
-校正/发稿：浪迹天涯
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
