--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,33 +1,25 @@
 ---
-title: 杨贝贝的歹毒用心堪比希特勒时代的戈培尔
+title: 习近平赞扬哈萨克斯坦镇压反抗者
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836360/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836408/)
 
-撰稿：纽约香草山信息部 – 6zero4
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
-2021年1月5日文贵大直播中，郭先生称，中共花一年时间通过世界级媒体HBO VICE以及记者杨贝贝，处心积虑利用假视频抹黑爆料革命，将全球华人定义为西方民主最大的敌人，将给海外华人带来“印尼排华”惨案般种族歧视、种族屠杀等灾难。杨贝贝事件是中共为华人乃至黄皮肤亚裔，精心罗织的极其阴险歹毒的天罗地网加强版。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-503.png)
-1月4日，被她蓄意恶剪的视频所陷害的战友跟律师们进行了沟通，新中国联邦人优秀的英文、清晰的思路与准确的表达让律师们感到惊讶。
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-87.png)图片来源网站
+《日本电视新闻》1月8日消息，在哈萨克斯坦，安全部队向抗议燃油价格上涨的示威者开枪。国际社会对造成大量人员伤亡严重关切中，中（共）国习近平1 月7日向哈萨克斯坦总统托卡耶夫表示，他完全支持当局对示威者的武装镇压。
 
-最后律师们对杨贝贝事件达成3点共识：一，确认2020年1月6日国会山动乱现场并没有新中国联邦国旗，这是极其危险的栽赃；二，把华人定义为西方民主的威胁，完全是希特勒当年戈培尔式宣传口径，这绝对适用RICO法案；三，这个毫无法律依据的视频，推出的时机和内容，说明杨贝贝不仅在挑战新中国联邦，也在挑战美国。美国两党很多议员看了视频后都认为她绝对跟中共有关系。
+习近平赞扬托卡耶夫在关键时刻采取了大胆有力的措施，迅速平息了局势，同时他还表示，坚决反对外部势力故意在哈萨克斯坦制造动乱。
 
-对于杨贝贝是中共最重要的大外宣，是对华人最危险的人，新中国联邦人和所有华人都有权力起诉HBO VICE和Isobel Yeung。
+习近平将外国势力干预镇压香港民主抗议活动作为其政府行动的一个理由，试图为他的暴政做辩护，并扩大其在中亚的影响力。
 
-新闻连接：[2022年1月5日 文贵大直播](https://gtv.org/video/id=61d59a1931a71619b57520a4)
+信息源：
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
+[中国・習主席　カザフスタン武力鎮圧を称賛](https://news.yahoo.co.jp/articles/cd87633969c9e3f840d2d96df4d3dd9b024c9f6a)
 
-总编/编辑：童谣
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
-校正/发稿：浪迹天涯
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
