--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,30 +1,63 @@
 ---
-title: 中共即将血腥内斗之时，灭共战神郭文贵先生喊话当代“司马懿”中共大佬曾庆红
+title: 1月7日木兰战友联盟答疑G系列相关信息文字版
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1836613/)
+`全球G系列咨服群` [轉載自GNews](https://gnews.org/zh-hans/1836645/)
 
-作者：卢卡斯
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片17.png)图片来源：GNEWS
-2022年1月5日文贵先生大直播中，文贵先生在回答加拿大圆成农场昔马千羽战友有关党内司马懿时说：中共党内最推崇智略绝伦的司马懿有三个人，第1个是曾庆红，第2个是王岐山，第3个是刘亚洲，然而这3人唯曾庆红堪称真正当代司马懿，另外二人不如司马懿远矣。曾庆红是今天红二代的领袖，平生常以司马懿自诩。曾家在中共党内根基极深，曾的父亲曾山1926年10月加入中共，位居要职，曾任中共内务部长，中共江西苏维埃国政府主席，是中共老革命家、开国功勋，历经中共党内无数政治斗争均毫发无损，曾的性格和政治斗争的智慧应该深受其父影响。
+非官方整理，一切信息以联盟答疑音频为准
 
-8964以后，时任上海市委书记的江泽民被邓小平选中，接任被邓罢黜的中共总书记赵紫阳的职务，诚惶诚恐的江随身只带了曾一人入京就职。当时北京官场完全不把江放在眼里，江处处受制，后来曾用其超一流的政治智慧和手腕击破了陈希同的北京帮,并成功地离间了邓与军头杨家将（杨尚昆杨白冰兄弟）之间的关系，取得了邓的信任和支持。97年邓死后，江掌握了军队大权，江家皇朝正式开始，曾作为江的军师在江家皇朝的地位崇高，曾经过数十年的经营而形成了曾派。曾具有司马懿的很多特质，譬如说他极其低调，注重保养，不近女色，极具政治智慧和手腕。文贵先生在2022年1月7日的大直播中称，曾是南普陀计划的发起人和设计者，由此可见一斑。
+G-听写：ohbigant；鲁西西
 
-去年文贵先生在一次直播中提到，曾一直在关注并且研究文贵先生的爆料革命，说明曾一直在审时度势，在做出招的准备。如今中共国的内部局势已经发展到赤身肉搏的血腥残酷内斗阶段，一者，习皇帝不甘于做上海帮的傀儡，而想扫灭群雄，实现其家天下的宏大目标，再者，江曾不会甘心交出权力，必然会绝地反击。双方的血腥屠杀和清洗即将开始。在此杀戮即将开启，生灵涂炭的紧要关头，文贵先生在今年1月5日的大直播中直接对曾喊话，赞扬曾有极高的政治智慧，希望他以中华民族的最大利益为重，在中共灭亡后站出来主持临时政府，把权力和平过渡给新中国联邦，避免出现历史上改朝换代而导致无数中国老百姓失去生命财产的悲剧，避免出现五代十国的混乱时代，若此实为中华民族之大幸。
+（时段：开始～12:00 ohbigant）
+1、HPay上线后，喜币能否由战友帮忙购买后转给自己？
+答：具体怎么操作目前还不清楚，应该是可以的。
 
-经过文贵先生5年来开智，和共产党制造释放CCP生化病毒武器，危害全人类的邪恶行径，如今国内外中国人和西方各国民众都已经认识到共产党的极度邪恶的本质，共产党乃是全人类的敌人和祸害。曾应该也清楚地明白这一点，从其制定的南普陀计划内容，我们也可以看出他已经料到共产党必定会快速灭亡。识时务者为俊杰，曾如果继续实行南普陀计划，共产党金蝉脱壳，换个马甲继续统治奴役中国老百姓，如今已经不可能了，因为有了文贵先生的爆料革命和新中国联邦。
+2、10万以下想投资数字银行，现在还能再参加？
+答：现在处理第一批中，处理完之后大概下周会再开放登记。
 
-文贵先生信心满满地表示，无论谁在这场中共血腥内斗中胜出，中共必将灭亡，他创立的新中国联邦将都将成为是真正的赢家，最终成为合法代表中国的政治权力和实体，实现让中国人一人一票选出合法、独立、法治、信仰自由的政府，西方国家一定会跟爆料革命和新中国联邦合作彻底消灭邪恶的中国共产党。
+3、通过联盟投资数字银行无法达到会计师证明的要求，是不是无法参与？
+答：是的，10万以下需要会计师的证明，达不到要求KYC无法通过。要证明你是合格投资者，需要个人净资产（比如房产）在250万澳元以上，或者连续近两年收入在25万澳元以上。
 
-文贵先生始终坚持以和平的方式，尽量少死人的方式，哪怕忍耐等待更多时日才消灭共产党，这是他的大智慧、大德大爱中国老百姓！就是希望中国以后不要再出现大规模的仇恨杀戮！在中华大地上，数千年来的治乱循环，几乎每一次改朝换代都导致无数老百姓被杀戮，譬如三国乱世，五胡乱华，明末农民起义和满清入关，太平天国运动，特别是100年来的共匪肆虐中国，残忍杀戮我炎黄子孙数亿人，中华大地到处充满怨气仇恨，冤魂野鬼！和平改朝换代，有利于千秋万代！
+4、10万以下投资数字银行已收到通过的邮件，需要哪些准备工作？
+答：投总部和联盟的要求是不一样的。
+10万以下需要两种带头像的ID，比如护照和驾照，护照和身份证。
+会计师出具的资产证明或是收入证明，要有资质的会计师。（CPA或CA）
 
-希望新中国联邦在消灭共匪，建立新的中国政府之后，请来当世得道高僧，同时在国内几个严重受到中共杀戮的城市（譬如武汉），连做七七四十九天大道场大法事，来超度那些不散的冤魂厉鬼，让他们得以投胎转世，如此则中华大地可以早日重归安宁祥和！
+5、10万以下投资需要卖房产的证明吗？
+答：我们是不需要的，不知道会计师是否需要。
 
-今天，遭受数千年来专制独裁的皇权统治和今天极度邪恶的中共魔鬼政权残暴统治的中国人正迎来他们最好的也是最后的机会，上天拣选了胸怀正义良知大爱的爆料革命和新中国联邦人，消灭中共，拯救中华同胞、拯救全人类，是上天给与我们的伟大使命。这是一个伟大的时代，这是巨人英雄的时代！追随文贵先生，加入爆料革命和新中国联邦，献奉出你最大的力量来加速中共的灭亡，这是我们战友们最大的荣耀。也许我们很渺小，也许我们默默无闻，但是我们可以自豪地说，我们活在一个伟大的时代，我们有幸与巨人英雄们同行！
+（时段：12:00～结束）
+6、数字银行投资要两个ID，假设护照驾照都是加拿大的，还需要公证吗？
+答：因为你不是提供原件，所以需要证明和原件是一致的。
 
-编辑/发布：LILY
+7、该如何要求会计师出具资产证明？
+答：一般有一个固定的格式。名称类似“合格投资者”“成熟投资者”之类。
 
-20220108
-![](https://assets.gnews.org/wp-content/uploads/2021/11/農場文宣-3.jpg)
+8、墙内能否暂缓交纳G|CLUBS年费，会影响年会抽奖资格吗？
+答：具体还不清楚。
+
+9、现在购买G|CLUBS卡还有福利政策吗？
+答：没有了。
+
+10、投资数字银行，护照和ID都要做公证吗？
+答：最好做一下，因为你提供的都是复印件。
+
+11、投资数字银行有没有专门的discord组群？
+答：联系农场填表申请加入。
+
+12、喜币也可以算做资产吗？
+答：可以的，只要你会计师认可就可以。
+
+13、SEC正式通知退款了吗？
+答：还没有。
+
+G系列都是独立机构，联盟答疑不代表任何G系列，不承担任何法律责任。联盟只是一个沟通的桥梁，一切以当地法律和G系列官方为准。 @everyone
+
+语音链接：[https://mega.nz/file/KIpCkTiD#ONyT8lzPspPOJOtjjKF3TcMdYtSON9Xkjjvf7sFWMtc](https://mega.nz/file/KIpCkTiD#ONyT8lzPspPOJOtjjKF3TcMdYtSON9Xkjjvf7sFWMtc)
+
+审核：*哲道行者；夏目&山竹*
+
+发布：*哲道行者*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
