--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,11 +1,9 @@
 ---
-title: 强制接种疫苗国家的共通点
+title: 你一定会看到你一生当中前所未有的全球的经济危机
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836392/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836418/)
 
 台灣寶島農場
-
-
 
  
 
