--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,28 +1,36 @@
 ---
-title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
+title: 中国科学家因窃取孟山都公司的机密而认罪
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836157/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
+**编译：美哥**
+**编辑:   MSGZ  **
 
-**2022-01-0**8
+![](https://assets.gnews.org/wp-content/uploads/2022/01/树叶.png)图片来源  theguardian.com
 
-华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
+前孟山都雇员向海涛，在美期间被指控窃取了美国农业技术，目的是让中共政府受益。
 
-一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
+周四，美国司法部门的起诉书里写道了44岁的向海涛密谋为中华人民共和国窃取商业机密。目前他已承认了罪行。
 
-克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
+向海涛在密苏里州的孟山都总部曾以科学家的身份工作过，在他离开后，就买了一张飞回北京的单程票，而执法人员在他的电子设备里发现一份“营养素优化”算法的系统副本，而该演算法属于孟山都的机密。本案将于4月7号宣判，如果指控全部成立，其将面临15年有期徒刑和500万的罚金处罚。
 
-哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
+美国密苏里州东区的检察官弗莱明 (Sayler Fleming) 表示：“我们不能允许美国公民或者外国人，将敏感商业信息交给别国的竞争对手，这些罪行对美国经济和国家安全十分危险。”
 
-（秘翻新闻主编 清风先生编译报道）
+美国联邦调查局反间谍助理小艾伦.科勒也称：“当像中国这样的政府盗取我们的技术来实现经济发展的同时，美国人成为了最大受害者。美国不仅仅是机密实验室里的军事技术，提高棉花产量的农业技术也同样会被对手觊觎。”
 
-发布:星星
+向海涛的认罪是美国司法界对反对中国干涉的又一次新胜利。上个月，前哈佛大学的化学部门负责人，因为非法参武汉工程大学的项目而认罪。
 
-* * *
+原文链接：[https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/](https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/)
 
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
+*发布：盘古相聚*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
