--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,22 +1,28 @@
 ---
-title: 南极疫情是外来输入，还是疫苗引发？
+title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836115/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
 
-撰稿—祥瑞舟
-校对/上传—无明逆流
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-据外媒报道，来自南极的一个偏远科考站近日传来了坏消息，半个月以来科考站超过一半的工作人员感染了新冠病毒。报道中指出，该南极科考站为“比利时南极伊丽莎白公主站”，在12月14日发现了第一例感染新冠病毒的工作人员。此后，又有多人病毒检测呈阳性。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/121374_1.jpg)
-该报道指出，所有工作人员在来到该科考站之前，都已经完成了新冠疫苗的接种，并且病毒检测也都呈阴性，目前尚不清楚是如何感染新冠病毒的。
-考虑到在病毒和疫苗真相面前所谓世界主流媒体已经被利益群体收买，从该篇报道中我们无法找寻更多的真相。然而实际上看过这篇报道的读者都会问同样的问题，他们是怎么感染病毒的？
+**2022-01-0**8
 
-尽管还缺乏足够多的证据，可常识是任何人都无法忽略的：在基本与世隔绝的南极，是不可能有外来输入传染源的。如果说有，那唯一的传染源很有可能是疫苗接种者自身疫苗副作用爆发所导致，这和西安情况有些相似。正如七哥最近爆料中提到过的那样，西安疫情是接种疫苗副作用导致的后果。
+华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
 
-除了爆料革命和部分西方正义人士一直在揭示病毒与疫苗真相，世界各国政府目前还都没有对病毒真相进行联合调查问责，疫苗接种也还没有被各国政府按下停止键，还需要更多时间去传播疫苗真相。
+一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
 
-当疫苗灾难频发、出现大量死亡和伤残案例，整个世界秩序陷入停摆与混乱的时候，人类当下面临的这场生化危机真正的拐点才会到来。停止接种疫苗、病毒追责以及疫苗追责将接踵而至，所有真相终将水落石出，正义终将战胜邪恶！
+克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
 
+哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
+
+（秘翻新闻主编 清风先生编译报道）
+
+发布:星星
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
