--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,26 +1,26 @@
 ---
-title: 中共二十大人事布局被曝 习总加速师已踏上不归路
+title: 媚上作祟 西安作协主席批隔离哭求女子“矫情”被网轰
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836571/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836628/)
 
-撰稿：东京樱花团/深藏不露
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-507.png)
-郭文贵先生1月7日在盖特爆出习近平对中共二十大的人事布局。国家主席是习近平，国务院总理是胡春华，人大委员长是丁薛祥、全国政协主席是李希、纪委书记是陈全国、第一副总理是陈敏尔。
+撰稿/配图：东京樱花团/Ob
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-508.png)
+看中国2022年1月8日讯，近日，陕西省作家协会副主席、西安市作家协会主席吴克敬因在文章中批评一名因疫情在集中隔离期间“哭诉无卫生巾”的女子是“矫情”，引发网民指责。
 
-据此可以看出，习总加速师已经彻底的癫狂了，他利用商鞅五术奴役着人民，还觉得管控不够，希望将中共国彻底变成像北朝鲜一样的大监狱，让习氏江山千秋万代！这孙子一开始当政就是这么打算的，它对老百姓的驭民之术用到极致，它可不是一时兴起，这猪头早就已经打算将中共国朝鲜化，当他重用酷吏陈全国这种奸邪恶吏治理新疆之时，习猪头的獠牙已经渐渐地露出，它邪恶的真实面目已经显现！
+近日，陕西省西安市一名女子因疫情在酒店集中隔离期间，因没有卫生巾哭着向工作人员求助。网传视频显示，西安一女子在某酒店集中隔离，女子称没有早饭、来大姨妈也没有卫生巾，哭求工作人员，打过12345热线、隔离点的电话、疾控防疫办的、公办电话，要么打不通，要么没人接，报警也没有人过来接。“我就想问一下，是没有人管吗？是准备把我们饿死吗？”当工作人员说卫生巾无法解决时，女子说，“我就要血流成河吗？”
 
-陈全国的前任张春贤采取“柔性治疆”的策略，被认为未能有效阻止新疆“暴恐事件”发生和治安恶化。自2014年乌鲁木齐火车南站暴力恐怖袭击案件发生之后，习总加速师就亲自下令兴建集中营！陈全国到任后，不管新疆的老百姓死活，为向习总加速师表忠心，提出“在新疆，没有稳定一切皆为零”的口号！此后，新疆采取大规模清查表面为政府工作但实际上被指支持疆独的“两面人”并调整人事、设立职业技能教育培训中心、社区联保等措施，从此将新疆变成了人间地狱！
+据悉，1月4日，吴克敬发表一篇文章，在赞扬其他两位女性抗疫人员的同时，却批评“哭求卫生巾”的女子“矫情”。推特视频中显示，《西安作协主席吴克敬痛批“因无卫生巾哭诉”女子：矫情，小姐做派！》吴克敬，陕西扶风人，毕业于西北大学中文系，硕士学位。现任陕西省作家协会副主席、西安市作家协会主席，中国书画院副院长、陕西书画院院长。
 
-2020年7月9日，美国财政部依照时任总统特朗普于2017年12月依照《全球马格尼茨基人权问责法》签署的行政命令，对陈全国等四名新疆政法机关领导人及新疆公安厅进行制裁！
+吴克敬在其文章中评论：视频中有位冲着防疫人员大喊大叫的女人，说她大姨妈来了，她没有卫生巾，别人也不关心她。对于她的抱怨，咱们平心而论，的确是个问题呢。女人家大姨妈来了，没有卫生巾是很难办，她可以苛责。不过，苛责的对象要找准，防疫工作人员那就是你自己了。你自己有没有卫生巾，什么时候用卫生巾，自己一点都不清楚吗？而在紧要的时刻，还要苛责别人不能上门给你送！这就你的不对了，你把自己情状，与在疫情中的姚美珍、寇雅玲比一下好吗？那你可是要惊醒的呢，疫情当前，什么矫情，什幺小姐作派，是没有用的，别人才不会惯着你，任由你大喊大叫！
 
-诸葛亮在给刘禅的《出师表》中提到，“亲贤臣，远小人，此先汉所以兴隆也；亲小人，远贤臣，此后汉所以倾颓也！”
+微博网友说，“正常需求变成矫情呵呵”、“拉屎需要纸不，你需要就是矫情了”、“嗯，你倒是没大姨妈”、“这个时候还一副高高在上的样子建议直接死”、“在文字里泡久了，脱离群众了，不仅矫情，而且酸臭！”、“没有共情的人怎么当领导的？”、“西安的官员，真的绝了”、“这俩天的西安，真是妖魔鬼怪各显神通”、“不说人话了简直”、“卑鄙是卑鄙者的通行证”、“人家是副厅级待遇，是有级别的，人家说话是有分量的”、“这些人嘴里全是主义，心里全是生意。爱国爱ZF替它们分忧，就是不爱平民，它们眼里都是巨婴”、“这种批评到底是人性的丧失还是道德的沦丧？”现在被网友挖出老底：1.小学毕业；2.一稿多投；3.涉嫌抄袭别人的文章。”
 
-像国际公认的酷吏佞臣陈全国，习总加速师不仅没有远离，还将其大力的提拔，可见习猪头的司马昭之心 路人皆知！它这是要用酷吏佞臣陈全国来对党内来个重磅深度大清洗！党内不久将会迎来可怕血雨腥风！习猪头家天下的如意算盘将会在无数人的鲜血中完成！
+圈养的文人当然要替主子吼几下，言外之意，疫情面前不要给领导添麻烦。不给领导添麻烦向来是政治正确的标准，一无能了就要大家顾大局讲政治。用糊弄、吓唬、挖苦掩盖自己治理能力的不足，明明是自己无能，却要把问题推给无辜受害者，这是典型的既“党”婊子又立牌坊的官方作为。
 
-相信共产党 走向火葬场 ！彻底癫狂的习猪头已经高高举起了它的屠刀，党内的战友们，一定要认清习猪头的邪恶用心，坚决要给习猪头当头一棒，这孙子只认强者，不会可怜弱者！请加入爆料革命、新中国联邦，让我们齐心协力将这邪恶的中国共产党从地球上彻底的摧毁！！
+消息来源：[西安作协主席批隔离哭求女子“矫情”被网轰(图)](https://m.secretchina.com/news/gb/2022/01/08/994469.html)
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
+*校对：东京樱花团/知了知了*
+*发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
